--- a/tex/electronicsDifferencePair.tex
+++ b/tex/electronicsDifferencePair.tex
@@ -20,7 +20,7 @@ i_{E1}+i_{E2}=2 \times I
 \label{شکل_تفرقی_جوڑے_کی_بنیادی_ساخت}
 \end{figure}
 %
-تفرقی جوڑے کی کارکردگی پر شکل \حوالہ{شکل_دونوں_مداخل_پر_برابر_برقی_دباو} کی مدد سے غور کرتے ہیں جہاں تفرقی جوڑے کے دونوں داخلی سروں پر یک سمتی برقی دباو \عددی{V_B}   بطور داخلی اشارات \عددی{v_{B1}} اور \عددی{v_{B2}}  مہیا کیا گیا ہے۔یوں \عددی{V_B} کو بطورِ \اصطلاح {مشترکہ برقی دباو}\فرہنگ{مشترکہ برقی دباو}\فرہنگ{common mode voltage}\حاشیہب{common mode voltage}  مہیا کیا گیا ہے۔ دور کو دیکھتے ہوئے یہ بات واضح ہے کہ اس کے بائیں اور دائیں اطراف بالکل یکساں ہیں۔یوں دونوں اطراف میں برابر برقی رو پائی جائے گی (یعنی \عددی{i_{E1}=i_{E2}})۔ایسی صورت میں مساوات \حوالہ{مساوات_تفرقی_کل_رو_قطعی}  سے \عددی{i_{E1}=i_{E2}=I}   حاصل ہوتا ہے اور یوں \عددی{i_{C1}=i_{C2}=\alpha I} ہو گا۔لہٰذا
+تفرقی جوڑے کی کارکردگی پر شکل \حوالہ{شکل_دونوں_مداخل_پر_برابر_برقی_دباو} کی مدد سے غور کرتے ہیں جہاں تفرقی جوڑے کے دونوں داخلی سروں پر یک سمت برقی دباو \عددی{V_B}   بطور داخلی اشارات \عددی{v_{B1}} اور \عددی{v_{B2}}  مہیا کیا گیا ہے۔یوں \عددی{V_B} کو بطورِ \اصطلاح {مشترکہ برقی دباو}\فرہنگ{مشترکہ برقی دباو}\فرہنگ{common mode voltage}\حاشیہب{common mode voltage}  مہیا کیا گیا ہے۔ دور کو دیکھتے ہوئے یہ بات واضح ہے کہ اس کے بائیں اور دائیں اطراف بالکل یکساں ہیں۔یوں دونوں اطراف میں برابر برقی رو پائی جائے گی (یعنی \عددی{i_{E1}=i_{E2}})۔ایسی صورت میں مساوات \حوالہ{مساوات_تفرقی_کل_رو_قطعی}  سے \عددی{i_{E1}=i_{E2}=I}   حاصل ہوتا ہے اور یوں \عددی{i_{C1}=i_{C2}=\alpha I} ہو گا۔لہٰذا
 \begin{align*}
 v_{C1}&=V_{CC}-i_{C1} R_C=V_{CC}-\alpha I R_C\\
 v_{C2}&=V_{CC}-i_{C2}R_C=V_{CC}-\alpha I R_C
@@ -334,7 +334,7 @@ i_{C1}&=\alpha i_{E1}=\alpha I +\frac{\alpha I}{V_T} \frac{v_d}{2}\\
 i_{C2}&=\alpha i_{E2}=\alpha I -\frac{\alpha I}{V_T} \frac{v_d}{2}
 \end{aligned}
 \end{gather}
-تفرقی اشارہ کے عدم موجودگی، یعنی \عددی{v_d=0} ، کی صورت میں \عددی{i_{E1}=i_{E2}=I}  ہی حاصل ہوتے ہیں جو کہ ان ٹرانزسٹر کے نقطہ کارکردگی پر برقی رو \عددی{I_{EQ1}} اور \عددی{I_{EQ2}}  ہیں۔اسی طرح \عددی{v_d=0} کی صورت میں مساوات \حوالہ{مساوات_تفرقی_پہلی_رو_تسلسل_کے_دو_جز}  سے \عددی{i_{C1}=\alpha I} اور \عددی{i_{C2}=\alpha I} حاصل ہوتا ہے جو نقطہ کارکردگی پر کلکٹر برقی رو ہیں جنہیں \عددی{I_{CQ}} یا صرف \عددی{I_{C}} لکھا جا سکتا ہے۔تفرقی اشارہ کے موجودگی میں مساوات \حوالہ{مساوات_تفرقی_پہلی_رو_تسلسل_کے_دو_جز} میں یک سمتی رو کے علاوہ بدلتی رو بھی پائی جاتی ہے۔یوں انہیں
+تفرقی اشارہ کے عدم موجودگی، یعنی \عددی{v_d=0} ، کی صورت میں \عددی{i_{E1}=i_{E2}=I}  ہی حاصل ہوتے ہیں جو کہ ان ٹرانزسٹر کے نقطہ کارکردگی پر برقی رو \عددی{I_{EQ1}} اور \عددی{I_{EQ2}}  ہیں۔اسی طرح \عددی{v_d=0} کی صورت میں مساوات \حوالہ{مساوات_تفرقی_پہلی_رو_تسلسل_کے_دو_جز}  سے \عددی{i_{C1}=\alpha I} اور \عددی{i_{C2}=\alpha I} حاصل ہوتا ہے جو نقطہ کارکردگی پر کلکٹر برقی رو ہیں جنہیں \عددی{I_{CQ}} یا صرف \عددی{I_{C}} لکھا جا سکتا ہے۔تفرقی اشارہ کے موجودگی میں مساوات \حوالہ{مساوات_تفرقی_پہلی_رو_تسلسل_کے_دو_جز} میں یک سمت رو کے علاوہ بدلتا رو بھی پائی جاتی ہے۔یوں انہیں
 \begin{gather}
 \begin{aligned}
 i_{C1}&=ِI_{C}+\frac{\alpha I}{V_T} \frac{v_d}{2}\\
@@ -343,7 +343,7 @@ i_{C2}&=ِI_{C}-\frac{\alpha I}{V_T} \frac{v_d}{2}\\
 &=I_{C}-i_c
 \end{aligned}
 \end{gather}
-لکھا جا سکتا ہے جہاں  \عددی{i_c} بدلتی برقی رو یعنی
+لکھا جا سکتا ہے جہاں  \عددی{i_c} بدلتا برقی رو یعنی
 \begin{align}
 i_c=\frac{\alpha I}{V_T}\frac{v_d}{2}=\left(\frac{I_{C}}{V_T}\right) \frac{v_d}{2}
 \end{align}
@@ -370,7 +370,7 @@ i_{C2}&=I_{C} - g_m \frac{v_d}{2}
 \caption{تفرقی برقی رو کا حصول بذریعہ ریاضی نمونہ}
 \label{شکل_تفرقی_رو_بذریعہ_ماڈل}
 \end{figure}
-شکل \حوالہ{شکل_تفرقی_رو_بذریعہ_ماڈل} ب میں تفرقی جوڑے کا مساوی بدلتی رو شکل دکھایا گیا ہے جہاں تمام یک سمتی منبع برقی دباو کو قصر دور  اور تمام یک سمتی منبع برقی رو کو کھلے سرے  کیا گیا ہے۔شکل \حوالہ{شکل_تفرقی_رو_بذریعہ_ماڈل} الف میں ٹرانزسٹر کے ٹی-ریاضی نمونہ استعمال کر کے اسی کا مساوی دور بنایا گیا ہے جہاں سے صاف ظاہر ہے کہ
+شکل \حوالہ{شکل_تفرقی_رو_بذریعہ_ماڈل} ب میں تفرقی جوڑے کا مساوی بدلتا رو شکل دکھایا گیا ہے جہاں تمام یک سمت منبع برقی دباو کو قصر دور  اور تمام یک سمت منبع برقی رو کو کھلے سرے  کیا گیا ہے۔شکل \حوالہ{شکل_تفرقی_رو_بذریعہ_ماڈل} الف میں ٹرانزسٹر کے ٹی-ریاضی نمونہ استعمال کر کے اسی کا مساوی دور بنایا گیا ہے جہاں سے صاف ظاہر ہے کہ
 \begin{align}
 i_e=\frac{v_{b1}-v_{b2}}{2 r_e}=\frac{v_d}{2 r_e}
 \end{align}
@@ -413,7 +413,7 @@ v_o&=+2 i_c R_C=+\frac{\alpha v_d R_C}{r_e+ R_E}\\
 A_d&=\frac{v_o}{v_d}=+\frac{\alpha R_C}{r_e+R_E} \approx +\frac{R_C}{r_e+R_E}
 \end{aligned}
 \end{gather}
-یاد رہے کہ اشاراتی تجزیہ کرتے وقت یک سمتی برقی دباو کو قصر دور جبکہ یک سمتی برقی رو کو آزاد  سرے کر دیا جاتا ہے۔ 
+یاد رہے کہ اشاراتی تجزیہ کرتے وقت یک سمت برقی دباو کو قصر دور جبکہ یک سمت برقی رو کو آزاد  سرے کر دیا جاتا ہے۔ 
 
 
 
@@ -446,7 +446,7 @@ i_b=\frac{i_e}{\beta+1}=\frac{1}{\beta+1} \left(\frac{v_d}{2 r_e +2 R_E} \right 
 \begin{align}
 R_{id}=\frac{v_d}{i_b}=\left(\beta+1 \right ) \left(2 r_e+2 R_E \right )
 \end{align}
-اب تک ہم تصور کرتے رہے ہیں کہ تفرقی ایمپلیفائر میں استعمال کئے جانے والے یک سمتی  منبع رو کی اندرونی مزاحمت لامحدود ہوتی ہے۔حقیقت میں پائے جانے والے یک سمتی  منبع رو کی اندرونی مزاحمت نہایت زیادہ مگر محدود ہوتی ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} الف میں یک سمتی  منبع رو کا مساوی \اصطلاح {نارٹن دور}\حاشیہب{Norton equivalent} استعمال کرتے ہوئے اس کے اندرونی باریک اشاراتی مزاحمت  \عددی{R} کو بھی شامل کیا گیا ہے۔اس شکل میں ٹرانزسٹر کا اندرونی مزاحمت  \عددی{r_e} کو تفرقی جوڑے کے اندر جانب فرضی طور دکھایا گیا ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} ب میں اس ایمپلیفائر کے داخلی جانب کا باریک اشاراتی ریاضی نمونہ دکھایا گیا ہے۔
+اب تک ہم تصور کرتے رہے ہیں کہ تفرقی ایمپلیفائر میں استعمال کئے جانے والے یک سمت  منبع رو کی اندرونی مزاحمت لامحدود ہوتی ہے۔حقیقت میں پائے جانے والے یک سمت  منبع رو کی اندرونی مزاحمت نہایت زیادہ مگر محدود ہوتی ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} الف میں یک سمت  منبع رو کا مساوی \اصطلاح {نارٹن دور}\حاشیہب{Norton equivalent} استعمال کرتے ہوئے اس کے اندرونی باریک اشاراتی مزاحمت  \عددی{R} کو بھی شامل کیا گیا ہے۔اس شکل میں ٹرانزسٹر کا اندرونی مزاحمت  \عددی{r_e} کو تفرقی جوڑے کے اندر جانب فرضی طور دکھایا گیا ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} ب میں اس ایمپلیفائر کے داخلی جانب کا باریک اشاراتی ریاضی نمونہ دکھایا گیا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{differencePairInputResistanceA}
@@ -496,7 +496,7 @@ v_e=\left(i_{e1}+i_{e2} \right ) R=2 i_e R
 \begin{align}
 v_e=i_e (2 R)=2 i_e R
 \end{align}
-اسی طرح دونوں اشکال میں ٹرانزسٹروں میں یک سمتی برقی رو کی قیمت \عددی{I} ہی ہے۔یوں مشترکہ اشارے کے لئے شکل  الف کو دو یکساں ایمپلیفائر تصور کیا جا سکتا ہے۔شکل  ب سے
+اسی طرح دونوں اشکال میں ٹرانزسٹروں میں یک سمت برقی رو کی قیمت \عددی{I} ہی ہے۔یوں مشترکہ اشارے کے لئے شکل  الف کو دو یکساں ایمپلیفائر تصور کیا جا سکتا ہے۔شکل  ب سے
 \begin{align}
 i_e=\frac{v_{CM}}{r_e+ 2R}
 \end{align}
@@ -652,7 +652,7 @@ V_O&=V_{C2}-V_{C1}=2 \alpha I R_C \frac{\Delta I_S}{I_S}\\
 ان دو وجوہات کے علاوہ دیگر وجوہات (مثلاً \عددی{\beta}  اور \عددی{r_o} میں فرق) کے بنا پر بھی انحرافی برقی دباو پیدا ہوتا ہے۔
 
 \جزوحصہ{داخلی میلان برقی رو اور انحرافی داخلی میلان برقی رو}
-تفرقی جوڑے کے دونوں بازو مکمل یکساں ہونے کی صورت میں دونوں جانب برابر یک سمتی \اصطلاح {میلان برقی رو}\فرہنگ{میلان برقی رو}\فرہنگ{input bias current}\حاشیہب{input bias current} کا گزر ہوتا ہے یعنی
+تفرقی جوڑے کے دونوں بازو مکمل یکساں ہونے کی صورت میں دونوں جانب برابر یک سمت \اصطلاح {میلان برقی رو}\فرہنگ{میلان برقی رو}\فرہنگ{input bias current}\حاشیہب{input bias current} کا گزر ہوتا ہے یعنی
 \begin{align}
 I_{B1}=I_{B2}=\frac{I}{\beta+1}
 \end{align}
@@ -692,22 +692,22 @@ I_{OS}=\abs{\frac{2 I}{\beta+1} \left(\frac{\Delta \beta}{\beta+1} \right )}=2 I
 حاصل ہوتے ہیں۔
 
 \حصہ{مخلوط ادوار میں دو جوڑ ٹرانزسٹر کے مائل کرنے کے طریقے}
-ہم نے دو جوڑ ٹرانزسٹر کو چار عدد مزاحمت کے مدد سے مائل کر کے ان کے نقطہ کارکردگی تعین کرنا دیکھا۔مخلوط دور میں ٹرانزسٹر کے نسبت، مزاحمت بنانا زیادہ مہنگا ثابت ہوتا ہے۔اسی لئے مخلوط ادوار میں مزاحمت کے استعمال سے گریز کیا جاتا ہے اور ان میں ٹرانزسٹر کو \اصطلاح {یک سمتی  منبع رو}\فرہنگ{یک سمتی  منبع رو}\فرہنگ{constant current source}\حاشیہب{constant current source}  کی مدد سے مائل کیا جاتا ہے۔اس سے پہلے کہ ہم دیکھیں یہ کیسا کیا جاتا ہے یہ ضروری ہے کہ \اصطلاح {یک سمتی  منبع رو} پر غور کیا جائے۔
+ہم نے دو جوڑ ٹرانزسٹر کو چار عدد مزاحمت کے مدد سے مائل کر کے ان کے نقطہ کارکردگی تعین کرنا دیکھا۔مخلوط دور میں ٹرانزسٹر کے نسبت، مزاحمت بنانا زیادہ مہنگا ثابت ہوتا ہے۔اسی لئے مخلوط ادوار میں مزاحمت کے استعمال سے گریز کیا جاتا ہے اور ان میں ٹرانزسٹر کو \اصطلاح {یک سمت  منبع رو}\فرہنگ{یک سمت  منبع رو}\فرہنگ{constant current source}\حاشیہب{constant current source}  کی مدد سے مائل کیا جاتا ہے۔اس سے پہلے کہ ہم دیکھیں یہ کیسا کیا جاتا ہے یہ ضروری ہے کہ \اصطلاح {یک سمت  منبع رو} پر غور کیا جائے۔
 
-\حصہ{یک سمتی  منبع برقی رو}
-شکل  \حوالہ{شکل_پیداکار_مستقل_برقی_رو} الف میں \عددی{npn}  ٹرانزسٹر استعمال کرتے ہوئے \اصطلاح {یک سمتی  منبع رو} کا حصول دکھایا گیا ہے۔ اس دور میں، \عددی{\alpha} کو تقریباً ایک \عددی{(\approx 1)}  تصور کرتے ہوئے، جب تک ٹرانزسٹر افزائندہ  رہے، \عددی{I_{\textup{بوجھ} }}  کا دارومدار زینر ڈایوڈ کے \عددی{V_Z} اور مزاحمت \عددی{R_E} پر ہے یعنی
+\حصہ{یک سمت  منبع برقی رو}
+شکل  \حوالہ{شکل_پیداکار_مستقل_برقی_رو} الف میں \عددی{npn}  ٹرانزسٹر استعمال کرتے ہوئے \اصطلاح {یک سمت  منبع رو} کا حصول دکھایا گیا ہے۔ اس دور میں، \عددی{\alpha} کو تقریباً ایک \عددی{(\approx 1)}  تصور کرتے ہوئے، جب تک ٹرانزسٹر افزائندہ  رہے، \عددی{I_{\textup{بوجھ} }}  کا دارومدار زینر ڈایوڈ کے \عددی{V_Z} اور مزاحمت \عددی{R_E} پر ہے یعنی
 \begin{align*}
 I_E=\frac{V_Z-V_{BE}}{R_E}
 \end{align*}
-یوں \عددی{I_{\textup{بوجھ} }}  تبدیل کرنے سے اس میں برقی رو تبدیل نہیں ہوتی۔اس سے ہم دیکھ سکتے ہیں کہ \عددی{I_{\textup{بوجھ} }}   سے منسلک بقایا دور بطور \اصطلاح {یک سمتی  منبع رو} کام کرتا ہے۔شکل میں نقطہ دار دائرے میں بند حصے کو \اصطلاح {یک سمتی  منبع رو} کہتے ہیں۔
-شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو} ب میں \اصطلاح {یک سمتی  منبع رو} کی علامت (تیر والا دائرہ) استعمال کرتے ہوئے اسی دور کو دوبارہ پیش کیا گیا ہے۔علامت میں تیر کا نشان مستقل برقی رو کی سمت دکھلاتا ہے۔آپ دیکھ سکتے ہیں کہ اس طرز کے یک سمتی  منبع رو کو استعمال کرتے ہوئے بوجھ کو مثبت برقی دباو \عددی{V_{CC}} اور یک سمتی  منبع رو کے مابین نسب کیا جاتا ہے اور یک سمتی  منبع رو  کی سمت بوجھ سے یک سمتی  منبع رو کی جانب ہوتی ہے۔یہاں آپ دیکھ سکتے ہیں کہ بوجھ سے برقی رو خارج ہو کر یک سمتی  منبع رو میں داخل ہوتی ہے۔ایسی یک سمتی  منبع رو بوجھ سے برقی رو زبردستی خارج  کراتی ہے۔اسی لئے اس دور کا زیادہ مقبول نام \اصطلاح {خارج کار منبع رو}\فرہنگ{خارج کار منبع رو}\حاشیہب{current sink}\فرہنگ{current sink} ہے۔ 
+یوں \عددی{I_{\textup{بوجھ} }}  تبدیل کرنے سے اس میں برقی رو تبدیل نہیں ہوتی۔اس سے ہم دیکھ سکتے ہیں کہ \عددی{I_{\textup{بوجھ} }}   سے منسلک بقایا دور بطور \اصطلاح {یک سمت  منبع رو} کام کرتا ہے۔شکل میں نقطہ دار دائرے میں بند حصے کو \اصطلاح {یک سمت  منبع رو} کہتے ہیں۔
+شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو} ب میں \اصطلاح {یک سمت  منبع رو} کی علامت (تیر والا دائرہ) استعمال کرتے ہوئے اسی دور کو دوبارہ پیش کیا گیا ہے۔علامت میں تیر کا نشان مستقل برقی رو کی سمت دکھلاتا ہے۔آپ دیکھ سکتے ہیں کہ اس طرز کے یک سمت  منبع رو کو استعمال کرتے ہوئے بوجھ کو مثبت برقی دباو \عددی{V_{CC}} اور یک سمت  منبع رو کے مابین نسب کیا جاتا ہے اور یک سمت  منبع رو  کی سمت بوجھ سے یک سمت  منبع رو کی جانب ہوتی ہے۔یہاں آپ دیکھ سکتے ہیں کہ بوجھ سے برقی رو خارج ہو کر یک سمت  منبع رو میں داخل ہوتی ہے۔ایسی یک سمت  منبع رو بوجھ سے برقی رو زبردستی خارج  کراتی ہے۔اسی لئے اس دور کا زیادہ مقبول نام \اصطلاح {خارج کار منبع رو}\فرہنگ{خارج کار منبع رو}\حاشیہب{current sink}\فرہنگ{current sink} ہے۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{constantCurrentSourceA}
 \caption{خارج کار منبع رو}
 \label{شکل_پیداکار_مستقل_برقی_رو}
 \end{figure}
-شکل-\حوالہ{شکل_پیداکار_مستقل_برقی_رو_ب} الف میں \عددی{pnp} ٹرانزسٹر پر مبنی یک سمتی  منبع رو دکھایا گیا ہے جبکہ شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو_ب} ب میں اسی دور کی علامتی شکل دکھائی گئی ہے۔اس طرز کے یک سمتی  منبع رو کو استعمال کرتے ہوئے بوجھ کو یک سمتی  منبع رو اور منفی برقی دباو \عددی{V_{EE}}  کے مابین نسب کیا جاتا ہے اور یک سمتی  منبع رو  کی سمت یک سمتی  منبع رو سے بوجھ کی جانب ہوتی ہے۔ایسی یک سمتی  منبع رو بوجھ میں برقی رو زبردستی داخل  کرتی ہے۔اسی لئے اس دور کو \اصطلاح {داخل کار منبع رو}\فرہنگ{داخل کار منبع رو}\حاشیہب{current source}\فرہنگ{current source} بھی کہا جاتا ہے۔ 
+شکل-\حوالہ{شکل_پیداکار_مستقل_برقی_رو_ب} الف میں \عددی{pnp} ٹرانزسٹر پر مبنی یک سمت  منبع رو دکھایا گیا ہے جبکہ شکل \حوالہ{شکل_پیداکار_مستقل_برقی_رو_ب} ب میں اسی دور کی علامتی شکل دکھائی گئی ہے۔اس طرز کے یک سمت  منبع رو کو استعمال کرتے ہوئے بوجھ کو یک سمت  منبع رو اور منفی برقی دباو \عددی{V_{EE}}  کے مابین نسب کیا جاتا ہے اور یک سمت  منبع رو  کی سمت یک سمت  منبع رو سے بوجھ کی جانب ہوتی ہے۔ایسی یک سمت  منبع رو بوجھ میں برقی رو زبردستی داخل  کرتی ہے۔اسی لئے اس دور کو \اصطلاح {داخل کار منبع رو}\فرہنگ{داخل کار منبع رو}\حاشیہب{current source}\فرہنگ{current source} بھی کہا جاتا ہے۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{constantCurrentSourceB}
@@ -715,7 +715,7 @@ I_E=\frac{V_Z-V_{BE}}{R_E}
 \label{شکل_پیداکار_مستقل_برقی_رو_ب}
 \end{figure}
 
-مخلوط ادوار میں عموماً متعدد یک سمتی  منبع رو درکار ہوتے ہیں۔وقت کے ساتھ ایسے ادوار کے کارکردگی میں تبدیلی آتی ہے جسے \اصطلاح {عمر رسیدگی}\فرہنگ{عمر رسیدگی}\فرہنگ{ageing}\حاشیہب{ageing}  کا عمل کہتے ہیں۔اسی طرح درجہ حرارت اور دیگر وجوہات کی بنا پر بھی ادوار کے کارکردگی میں تبدیلی رونما ہوتی ہے۔مخلوط دور میں استعمال ہونے والے تمام یک سمتی  منبع رو میں پائے جانے والے اس طرح کے اثرات کو یکساں بنانے کی کوشش کی جاتی ہے۔یوں ان سے نپٹنا نسبتاً آسان ہوتا ہے۔آئیں دیکھیں کہ اس طرز کے یک سمتی  منبع رو کیسے بنائے جاتے ہیں۔
+مخلوط ادوار میں عموماً متعدد یک سمت  منبع رو درکار ہوتے ہیں۔وقت کے ساتھ ایسے ادوار کے کارکردگی میں تبدیلی آتی ہے جسے \اصطلاح {عمر رسیدگی}\فرہنگ{عمر رسیدگی}\فرہنگ{ageing}\حاشیہب{ageing}  کا عمل کہتے ہیں۔اسی طرح درجہ حرارت اور دیگر وجوہات کی بنا پر بھی ادوار کے کارکردگی میں تبدیلی رونما ہوتی ہے۔مخلوط دور میں استعمال ہونے والے تمام یک سمت  منبع رو میں پائے جانے والے اس طرح کے اثرات کو یکساں بنانے کی کوشش کی جاتی ہے۔یوں ان سے نپٹنا نسبتاً آسان ہوتا ہے۔آئیں دیکھیں کہ اس طرز کے یک سمت  منبع رو کیسے بنائے جاتے ہیں۔
 
 \حصہ{آئینہ برقی رو}
 شکل \حوالہ{شکل_آئینہ_برقی_رو_الف} الف میں \اصطلاح {آئینہ برقی رو}\فرہنگ{آئینہ برقی رو}\فرہنگ{current mirror}\حاشیہب{current mirror}  دکھایا گیا ہے۔تصور کریں کہ دونوں ٹرانزسٹر کے \عددی{\beta} کی قیمت لامحدود ہے اور بائیں بازو میں برقی رو  \عددی{I_{\textup{حوالہ}}} گزر رہی ہے۔ \عددی{\beta} کی قیمت لامحدود ہو تو ٹرانزسٹر کے بیس  سرے پر برقی رو  \عددی{I_B}  قابل نظر انداز ہو گی۔یوں ٹرانزسٹر \عددی{Q_1}  میں برقی رو  \عددی{I_{\textup{حوالہ}}}  اور اس کے بیس-ایمٹر جوڑ پر برقی دباو \عددی{V_{BE}} پایا جائے گا جہاں
@@ -777,7 +777,7 @@ I_{\textup{عکس}} \approx \frac{I_{\textup{حوالہ}}} {1+\frac{2}{\beta^2}}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{currentMirrorB}
-\caption{بہتر یک سمتی  منبع رو}
+\caption{بہتر یک سمت  منبع رو}
 \label{شکل_بہتر_پیداکار_مستقل_برقی_رو}
 \end{figure}
 اگر شکل \حوالہ{شکل_بہتر_پیداکار_مستقل_برقی_رو} میں \عددی{I_{\textup{حوالہ}}} پیدا کرنے کی خاطر ایک عدد مزاحمت \عددی{R}  کو \عددی{V_{CC}} اور \عددی{Q_3} کے کلکٹر سرے کے درمیان جوڑ دیا جائے تب \عددی{I_{\textup{حوالہ}}}  یوں حاصل ہو گا۔
@@ -874,17 +874,17 @@ I_{\textup{حوالہ}}&=\frac{V_{CC}-0.7-V_{EE}}{R}=I_{\textup{عکس}}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{currentMirrorDifferentTypes}
-\caption{یک سمتی  منبع رو کے مختلف ادوار}
+\caption{یک سمت  منبع رو کے مختلف ادوار}
 \label{شکل_پیداکار_مستقل_برقی_رو_کے_مختلف_ادوار}
 \end{figure}
 شکل  ب میں اسی کا مساوی \عددی{pnp}  ٹرانزسٹروں پر مبنی  داخل کار مستقل برقی رو دکھایا گیا ہے۔یہ دور نقطہ دار لکیر کی جگہ نسب مطلوبہ دور میں مستقل برقی رو\عددی{I_{\textup{عکس}}} گزارتا ہے۔
 
-شکل  پ میں ان دونوں ادوار کو یوں جوڑا گیا ہے کہ ایک ہی مزاحمت دونوں یک سمتی  منبع رو کے  \عددی{I_{\textup{عکس}}}  کا تعین کرتا ہے۔اس دور کے لئے ہم لکھ سکتے ہیں۔
+شکل  پ میں ان دونوں ادوار کو یوں جوڑا گیا ہے کہ ایک ہی مزاحمت دونوں یک سمت  منبع رو کے  \عددی{I_{\textup{عکس}}}  کا تعین کرتا ہے۔اس دور کے لئے ہم لکھ سکتے ہیں۔
 \begin{align*}
 V_{CC}&=V_{EB}+I_{\textup{حوالہ}} R +V_{BE} +V_{EE}\\
 I_{\textup{حوالہ}}&=\frac{V_{CC}-0.7-0.7-V_{EE}}{R}=I_{\textup{عکس}}
 \end{align*}
-\جزوحصہ{متعدد یک سمتی  منبع رو}
+\جزوحصہ{متعدد یک سمت  منبع رو}
 
 شکل \حوالہ{شکل_آئینہ_برقی_رو_الف} میں تیسرے ٹرانزسٹر یعنی \عددی{Q_3} کے شمولیت سے شکل \حوالہ{شکل_دو_عکس_کا_حصول} الف حاصل ہوتا ہے۔چونکہ \عددی{Q_3} کے بیس-ایمٹر جوڑ پر بھی \عددی{Q_1} اور \عددی{Q_2} کے برابر \عددی{V_{BE}} پایا جاتا ہے لہٰذا اس میں بھی بالکل انہیں کے برابر \عددی{I_C} برقی رو پائی جائے گی۔
 \begin{figure}
@@ -904,7 +904,7 @@ I_{\textup{عکس}}=\frac{I_{\textup{حوالہ}}}{1+\frac{3}{\beta}}
 \end{align}
 اس دور کو عموماً شکل \حوالہ{شکل_دو_عکس_کا_حصول} ب یا شکل \حوالہ{شکل_دو_عکس_کا_حصول} پ کے طرز پر صاف اور شفاف طریقے سے بنایا جاتا ہے۔شکل  پ میں ایک ہی ٹرانزسٹر کے دو کلکٹر دکھائے گئے ہیں۔اس سے مراد دو ٹرانزسٹر لینا چاہئے جس کے بیس  آپس میں جڑے ہیں اور اسی طرح اس کے ایمٹر بھی آپس میں جڑے ہیں جبکہ دونوں کے کلکٹر آپس میں نہیں جوڑے گئے ہیں۔
 
-اسی بحث  کو آگے بڑھاتے ہوئے ایک ایسے یک سمتی  منبع رو جو \عددی{n} عکس بناتا ہو کے لئے مساوات \حوالہ{مساوات_تفرقی_تین_عکس}  کی صورت یوں ہو گی۔
+اسی بحث  کو آگے بڑھاتے ہوئے ایک ایسے یک سمت  منبع رو جو \عددی{n} عکس بناتا ہو کے لئے مساوات \حوالہ{مساوات_تفرقی_تین_عکس}  کی صورت یوں ہو گی۔
 \begin{align}
 I_{\textup{عکس}}=\frac{I_{\textup{حوالہ}}}{1+\frac{n+1}{\beta}}
 \end{align}
@@ -912,20 +912,20 @@ I_{\textup{عکس}}=\frac{I_{\textup{حوالہ}}}{1+\frac{n+1}{\beta}}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{currentMirrorMultiple}
-\caption{متعدد یک سمتی  منبع رو}
+\caption{متعدد یک سمت  منبع رو}
 \label{شکل_متعدد_پیداکار_برقی_رو}
 \end{figure}
 \حصہ{ٹرانزسٹر بوجھ سے لدا دو جوڑ ٹرانزسٹر کا تفرقی ایمپلیفائر}
 جیسا کہ پہلے بھی ذکر کیا گیا، مخلوط ادوار بناتے وقت کوشش کی جاتی ہے کہ مزاحمتوں کا استعمال کم سے کم کیا جائے۔جیسا کہ شکل \حوالہ{شکل_ٹرانزسٹر_بار_سے_لدھا_تفرقی_جوڑا} الف میں دکھایا گیا ہے، مخلوط ادوار میں استعمال ہونے والے تفرقی ایمپلیفائر کے خارجی جانب مزاحمت \عددی{R_C} کی جگہ \اصطلاح {آئینہ برقی} رو استعمال کیا جاتا ہے۔
 
-یک سمتی  منبع رو کل \عددی{2 \times I} برقی رو جڑوا ٹرانزسٹروں سے گزارتا ہے۔یوں داخلی تفرقی برقی اشارہ کے عدم موجودگی میں ایمپلیفائر کے ٹرانزسٹر \عددی{Q_{a1}}  اور \عددی{Q_{a2}} میں یک سمتی برقی رو \عددی{I} گزر کر انہیں مائل کرتی ہے۔ \عددی{Q_{b1}} اور \عددی{Q_{b2}} جو کہ آئینہ برقی رو ہیں، بطورِ برقی بوجھ استعمال کئے گئے ہیں۔ \عددی{Q_{b1}} کی برقی رو کو دیکھ کر \عددی{Q_{b2}} اس کا عکس برقی رو پیدا کرتا ہے۔چونکہ \عددی{Q_{b1}} سے وہی برقی رو گزرتی ہے جو \عددی{Q_{a1}} سے گزرتی ہے لہٰذا \عددی{I} بطور حوالہ استعمال ہو گا اور  \عددی{Q_{b2}} اس کے برابر (یعنی  \عددی{I} ) عکس پیدا کرے گا۔چونکہ  \عددی{Q_{a2}} میں بھی \عددی{I} برقی رو گزر رہی ہے لہٰذا \عددی{Q_{b2}} کی پیدا کردہ تمام کی تمام برقی رو \عددی{Q_{a2}} سے ہی گزرے گی اور یوں بیرونی برقی مزاحمت \عددی{R_L} میں صفر برقی رو گزرے گی۔یوں \عددی{v_o} صفر وولٹ ہو گا۔
+یک سمت  منبع رو کل \عددی{2 \times I} برقی رو جڑوا ٹرانزسٹروں سے گزارتا ہے۔یوں داخلی تفرقی برقی اشارہ کے عدم موجودگی میں ایمپلیفائر کے ٹرانزسٹر \عددی{Q_{a1}}  اور \عددی{Q_{a2}} میں یک سمت برقی رو \عددی{I} گزر کر انہیں مائل کرتی ہے۔ \عددی{Q_{b1}} اور \عددی{Q_{b2}} جو کہ آئینہ برقی رو ہیں، بطورِ برقی بوجھ استعمال کئے گئے ہیں۔ \عددی{Q_{b1}} کی برقی رو کو دیکھ کر \عددی{Q_{b2}} اس کا عکس برقی رو پیدا کرتا ہے۔چونکہ \عددی{Q_{b1}} سے وہی برقی رو گزرتی ہے جو \عددی{Q_{a1}} سے گزرتی ہے لہٰذا \عددی{I} بطور حوالہ استعمال ہو گا اور  \عددی{Q_{b2}} اس کے برابر (یعنی  \عددی{I} ) عکس پیدا کرے گا۔چونکہ  \عددی{Q_{a2}} میں بھی \عددی{I} برقی رو گزر رہی ہے لہٰذا \عددی{Q_{b2}} کی پیدا کردہ تمام کی تمام برقی رو \عددی{Q_{a2}} سے ہی گزرے گی اور یوں بیرونی برقی مزاحمت \عددی{R_L} میں صفر برقی رو گزرے گی۔یوں \عددی{v_o} صفر وولٹ ہو گا۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{activeLoadedDifferencePair}
 \caption{ٹرانزسٹر بوجھ سے لدا دو جوڑ ٹرانزسٹر والا تفرقی ایمپلیفائر}
 \label{شکل_ٹرانزسٹر_بار_سے_لدھا_تفرقی_جوڑا}
 \end{figure}
-اب تصور کریں کہ تفرقی برقی اشارہ \عددی{v_d} مہیا کیا جاتا ہے۔ \عددی{Q_{a1}} اور  \عددی{Q_{a2}} میں بدلتی برقی رو \عددی{g_m \frac{v_d}{2}} پیدا ہو گی جن کی سمتیں شکل میں دکھائی گئی ہیں۔\عددی{Q_{a1}}  کا برقی رو (یعنی \عددی{g_m \frac{v_d}{2}} ) ٹرانزسٹر  \عددی{Q_{b1}} سے بھی گزرتا ہے اور یوں \عددی{Q_{b2}}  اس کا عکس پیدا کرے گا جیسا کہ شکل میں دکھایا گیا ہے۔جوڑ \عددی{v_o} میں دو اطراف سے \عددی{g_m \frac{v_d}{2}}  کی برقی رو داخل ہوتی ہے۔یوں اس جوڑ پر کل داخلی برقی رو کی مقدار \عددی{g_m v_d}  ہے۔ کرخوف کے قانون برائے برقی رو کے مطابق اتنی ہی برقی رو اس جوڑ سے باہر نکلے گی۔یوں بوجھ \عددی{R_L} میں \عددی{g_m v_d} برقی رو زمین کی جانب گزرے گی اور یوں
+اب تصور کریں کہ تفرقی برقی اشارہ \عددی{v_d} مہیا کیا جاتا ہے۔ \عددی{Q_{a1}} اور  \عددی{Q_{a2}} میں بدلتا برقی رو \عددی{g_m \frac{v_d}{2}} پیدا ہو گی جن کی سمتیں شکل میں دکھائی گئی ہیں۔\عددی{Q_{a1}}  کا برقی رو (یعنی \عددی{g_m \frac{v_d}{2}} ) ٹرانزسٹر  \عددی{Q_{b1}} سے بھی گزرتا ہے اور یوں \عددی{Q_{b2}}  اس کا عکس پیدا کرے گا جیسا کہ شکل میں دکھایا گیا ہے۔جوڑ \عددی{v_o} میں دو اطراف سے \عددی{g_m \frac{v_d}{2}}  کی برقی رو داخل ہوتی ہے۔یوں اس جوڑ پر کل داخلی برقی رو کی مقدار \عددی{g_m v_d}  ہے۔ کرخوف کے قانون برائے برقی رو کے مطابق اتنی ہی برقی رو اس جوڑ سے باہر نکلے گی۔یوں بوجھ \عددی{R_L} میں \عددی{g_m v_d} برقی رو زمین کی جانب گزرے گی اور یوں
 
 \begin{align} \label{مساوات_تفرقی_ٹرانزسٹر_سے_لدھے_تفرقی_جوڑے_کا_مخارج}
 v_o=\left(g_m \frac{v_d}{2}+g_m \frac{v_d}{2} \right )R_L=g_m R_L v_d
@@ -958,7 +958,7 @@ A_d&=\frac{50}{25 \times 10^{-3}}=\SI{2000}{\volt \per \volt}
 شکل \حوالہ{شکل_تفرقی_حسابی_ایمپلیفائر_بنیادی_دور} میں حسابی ایمپلیفائر کا بنیادی دور دکھایا گیا ہے جہاں تمام ٹرانزسٹر کا \عددی{\beta=100} ہے۔\عددی{Q_1} کا بیس  اور \عددی{Q_4} کا بیس حسابی ایمپلیفائر کے دو داخلی سرے ہیں جنہیں برقی زمین پر رکھا گیا ہے جبکہ \عددی{Q_8} کا ایمٹر حسابی ایمپلیفائر کا خارجی سرا ہے۔
 \begin{itemize}
 \item
-تمام یک سمتی متغیرات حاصل کریں۔
+تمام یک سمت متغیرات حاصل کریں۔
 \item
 داخلی میلان برقی رو \عددیء{I_B} حاصل کریں۔
 \end{itemize}
@@ -970,7 +970,7 @@ A_d&=\frac{50}{25 \times 10^{-3}}=\SI{2000}{\volt \per \volt}
 \label{شکل_تفرقی_حسابی_ایمپلیفائر_بنیادی_دور}
 \end{figure}
 
-حل:پہلے حسابی ایمپلیفائر کے مختلف حصے پہچانے کی کوشش کرتے ہیں۔\عددیء{Q_9}، \عددیء{Q_{10}} اور \عددیء{\SI{143}{\kilo \ohm}} کا مزاحمت آئینہ برقی رو بناتے ہیں۔\عددیء{Q_{11}} بھی \عددیء{Q_9} کے برقی رو کا عکس پیش کرتا ہے۔\عددیء{Q_1} اور \عددیء{Q_2} مل کر ایک ڈارلنگٹن جوڑی بناتے ہیں۔اسی طرح \عددیء{Q_3} اور \عددیء{Q4} دوسری ڈارلنگٹن جوڑی ہے۔یہ دو ڈارلنگٹن مل کر پہلا یا داخلی تفرقی ایمپلیفائر بناتے ہیں۔\عددیء{Q_5} اور \عددیء{Q_6} دوسرا تفرقی ایمپلیفائر ہے۔\عددیء{Q_7}، \عددیء{\SI{2.3}{\kilo \ohm}} اور \عددیء{\SI{15.7}{\kilo \ohm}} مل کر یک سمتی برقی دباو  کی قیمت تبدیل کرتے ہیں جبکہ \عددیء{Q_8} اور \عددی{\SI{3}{\kilo \ohm}} خارجی حصہ ہیں۔
+حل:پہلے حسابی ایمپلیفائر کے مختلف حصے پہچانے کی کوشش کرتے ہیں۔\عددیء{Q_9}، \عددیء{Q_{10}} اور \عددیء{\SI{143}{\kilo \ohm}} کا مزاحمت آئینہ برقی رو بناتے ہیں۔\عددیء{Q_{11}} بھی \عددیء{Q_9} کے برقی رو کا عکس پیش کرتا ہے۔\عددیء{Q_1} اور \عددیء{Q_2} مل کر ایک ڈارلنگٹن جوڑی بناتے ہیں۔اسی طرح \عددیء{Q_3} اور \عددیء{Q4} دوسری ڈارلنگٹن جوڑی ہے۔یہ دو ڈارلنگٹن مل کر پہلا یا داخلی تفرقی ایمپلیفائر بناتے ہیں۔\عددیء{Q_5} اور \عددیء{Q_6} دوسرا تفرقی ایمپلیفائر ہے۔\عددیء{Q_7}، \عددیء{\SI{2.3}{\kilo \ohm}} اور \عددیء{\SI{15.7}{\kilo \ohm}} مل کر یک سمت برقی دباو  کی قیمت تبدیل کرتے ہیں جبکہ \عددیء{Q_8} اور \عددی{\SI{3}{\kilo \ohm}} خارجی حصہ ہیں۔
 
 \عددی{Q_9} کے بیس پر
 \begin{align*}
@@ -1022,7 +1022,7 @@ V_{B8}=-15+15.7=\SI{0.7}{\volt}
 \begin{align*}
 V_{E8}=V_{B8}-V_{BE}=0.7-0.7=\SI{0}{\volt}
 \end{align*}
-پایا جائے گا۔آپ دیکھ سکتے ہیں کہ \عددیء{\SI{2.3}{\kilo \ohm}} اور \عددیء{\SI{15.7}{\kilo \ohm}} کی قیمتوں سے \عددیء{v_O=\SI{0}{\volt}} حاصل کیا گیا۔\عددیء{Q_7} اور اس کے ساتھ منسلک دو مزاحمت یک سمتی برقی دباو کی سطح تبدیل کرنے کی صلاحیت رکھتے ہیں۔اسی وجہ سے اس دور کو ہم \اصطلاح {سطح تبدیل کار}\فرہنگ{سطح تبدیل کار}\حاشیہب{level shifter}\فرہنگ{level shifter} کہیں گے۔
+پایا جائے گا۔آپ دیکھ سکتے ہیں کہ \عددیء{\SI{2.3}{\kilo \ohm}} اور \عددیء{\SI{15.7}{\kilo \ohm}} کی قیمتوں سے \عددیء{v_O=\SI{0}{\volt}} حاصل کیا گیا۔\عددیء{Q_7} اور اس کے ساتھ منسلک دو مزاحمت یک سمت برقی دباو کی سطح تبدیل کرنے کی صلاحیت رکھتے ہیں۔اسی وجہ سے اس دور کو ہم \اصطلاح {سطح تبدیل کار}\فرہنگ{سطح تبدیل کار}\حاشیہب{level shifter}\فرہنگ{level shifter} کہیں گے۔
 \انتہا{مثال}
 %================
 \ابتدا{مثال}\شناخت{مثال_تفرقی_ڈارلنگٹن_تفرقی_کی_افزائش_برقی_دباو}
@@ -1034,7 +1034,7 @@ V_{E8}=V_{B8}-V_{BE}=0.7-0.7=\SI{0}{\volt}
 \label{شکل_تفرقی_حسابی_ایمپلیفائر_دور_بدلتا_مساوی_دور}
 \end{figure}
 
-حل:شکل \حوالہ{شکل_تفرقی_حسابی_ایمپلیفائر_دور_بدلتا_مساوی_دور} میں بدلتی رو مساوی دور دکھایا گیا ہے جہاں
+حل:شکل \حوالہ{شکل_تفرقی_حسابی_ایمپلیفائر_دور_بدلتا_مساوی_دور} میں بدلتا رو مساوی دور دکھایا گیا ہے جہاں
 \begin{align*}
 v_2&=+\frac{v_d}{2}\\
 v_1&=-\frac{v_d}{2}
@@ -1534,7 +1534,7 @@ v_d&=\left(v_{GS1}+v_S \right)-\left(v_{GS2}+v_S \right)\\
 &=v_{GS1}-v_{GS2}
 \end{aligned}
 \end{gather}
-لکھا جا سکتا ہے۔دھیان رہے کہ \عددی{v_{G1}} اور \عددی{v_{G2}} تبدیل کرنے سے \عددی{v_S} بھی تبدیل ہوتا ہے۔بدلتے اشارے کے عدم موجودگی میں \عددی{v_{GS1}=v_{GS2}=V_{GS}} ہوتا ہے۔اس صورت میں تفرقی جوڑے کے دونوں ماسفیٹ میں برابر یک سمتی برقی رو گزرتی ہے۔تفرقی جوڑے میں کرخوف کے قانون برائے برقی رو کی مدد سے
+لکھا جا سکتا ہے۔دھیان رہے کہ \عددی{v_{G1}} اور \عددی{v_{G2}} تبدیل کرنے سے \عددی{v_S} بھی تبدیل ہوتا ہے۔بدلتے اشارے کے عدم موجودگی میں \عددی{v_{GS1}=v_{GS2}=V_{GS}} ہوتا ہے۔اس صورت میں تفرقی جوڑے کے دونوں ماسفیٹ میں برابر یک سمت برقی رو گزرتی ہے۔تفرقی جوڑے میں کرخوف کے قانون برائے برقی رو کی مدد سے
 \begin{align}\label{مساوات_تفرقی_دونوں_برقی_رو_کا_مجموعی_قطعی_ہے}
 i_{DS1}+i_{DS2}=2I
 \end{align}
@@ -1617,14 +1617,14 @@ i_{DS2}& \approx I-\left(\frac{v_d}{2}\right) \frac{2I}{V_{GS}-V_t}
 \begin{align*}
 g_m=\frac{2 I_{DS}}{V_{GS}-V_t}
 \end{align*}
-کے برابر ہے جہاں \عددی{I_{DS}} ماسفیٹ سے گزرتی یک سمتی برقی رو ہے۔مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو_خطی_مساوات} میں یک سمتی برقی رو کو \عددی{I} کہا گیا ہے۔یوں مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو_خطی_مساوات} کو
+کے برابر ہے جہاں \عددی{I_{DS}} ماسفیٹ سے گزرتی یک سمت برقی رو ہے۔مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو_خطی_مساوات} میں یک سمت برقی رو کو \عددی{I} کہا گیا ہے۔یوں مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو_خطی_مساوات} کو
 \begin{gather}
 \begin{aligned}\label{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو_خطی_مساوات_الف}
 i_{DS1}& \approx I+g_m \left(\frac{v_d}{2}\right) \\
 i_{DS2}& \approx I-g_m \left(\frac{v_d}{2}\right)
 \end{aligned}
 \end{gather}
-لکھا جا سکتا ہے۔مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو_خطی_مساوات_الف} کا انتہائی سادہ مطلب ہے۔مثبت بدلتے برقی اشارے کے موجودگی میں \عددی{i_{DS1}} کی قیمت  میں \عددی{g_m \tfrac{v_d}{2}}  کا اضافہ ہوتا ہے جبکہ \عددی{i_{DS2}} کی قیمت میں اتنی ہی کمی رونما ہوتی ہے۔\عددی{i_{DS1}} جمع \عددی{i_{DS2}} اب بھی \عددی{2I} کے برابر ہے۔\عددی{i_{DS1}} اور \عددی{i_{DS2}} میں اس بدلتی برقی رو کو \عددی{i_d} لکھا جا سکتا ہے یعنی
+لکھا جا سکتا ہے۔مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو_خطی_مساوات_الف} کا انتہائی سادہ مطلب ہے۔مثبت بدلتے برقی اشارے کے موجودگی میں \عددی{i_{DS1}} کی قیمت  میں \عددی{g_m \tfrac{v_d}{2}}  کا اضافہ ہوتا ہے جبکہ \عددی{i_{DS2}} کی قیمت میں اتنی ہی کمی رونما ہوتی ہے۔\عددی{i_{DS1}} جمع \عددی{i_{DS2}} اب بھی \عددی{2I} کے برابر ہے۔\عددی{i_{DS1}} اور \عددی{i_{DS2}} میں اس بدلتا برقی رو کو \عددی{i_d} لکھا جا سکتا ہے یعنی
 \begin{align}
 i_d=g_m \left(\frac{v_d}{2} \right)
 \end{align} 
@@ -1635,11 +1635,11 @@ i_{DS1}&=I+i_d\\
 i_{DS2}&=I-i_d
 \end{aligned}
 \end{gather}
-کے برابر ہیں۔\عددی{v_d} کی وہ قیمت جس پر تمام کی تمام \عددی{2I} یک سمتی برقی رو کسی ایک ماسفیٹ میں منتقل ہو جاتی ہے کو مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو} کی مدد سے حاصل کیا جا سکتا ہے۔مثبت \عددی{v_d} کی صورت میں برقی رو \عددی{Q_1} کو منتقل ہو گی۔یوں \عددی{i_{DS1}=2I} جبکہ \عددی{i_{DS2}=0} ہوں گے۔مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو} میں \عددی{i_{DS1}=2ِ}  پُر کرتے حل کرنے سے
+کے برابر ہیں۔\عددی{v_d} کی وہ قیمت جس پر تمام کی تمام \عددی{2I} یک سمت برقی رو کسی ایک ماسفیٹ میں منتقل ہو جاتی ہے کو مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو} کی مدد سے حاصل کیا جا سکتا ہے۔مثبت \عددی{v_d} کی صورت میں برقی رو \عددی{Q_1} کو منتقل ہو گی۔یوں \عددی{i_{DS1}=2I} جبکہ \عددی{i_{DS2}=0} ہوں گے۔مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو} میں \عددی{i_{DS1}=2ِ}  پُر کرتے حل کرنے سے
 \begin{align}\label{مساوات_تفرقی_جوڑے_کو_درکار_زیادہ_سے_زیادہ_داخلی_برقی_دباو}
 \abs{v_{d}}_{بلندتر}= \sqrt{2} \left(V_{GS}-V_t \right)
 \end{align} 
-حاصل ہوتا ہے۔اس قیمت سے \عددی{v_d} کو مزید بڑھانے سے برقی رو میں مزید تبدیلی رونما نہیں ہو گی۔اتنی ہی منفی داخلی برقی دباو کی صورت میں تمام کی تمام یک سمتی برقی رو \عددی{Q_2} کو منتقل ہو جائے گی اور یوں \عددی{i_{DS1}=0} جبکہ \عددی{i_{DS2}=2I} ہوں گے۔شکل \حوالہ{شکل_تفرقی_داخلی_برقی_دباو_بالمقابل_برقی_رو} میں مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو} کے خط کھینچے گئے ہیں۔ان خطوط سے آپ دیکھ سکتے ہیں کہ \عددیء{v_d} کی وہ قیمت جس پر تمام کی تمام برقی رو ایک جانب منتقل ہو جاتی ہے  صفحہ \حوالہصفحہ{مساوات_میدانی_باریک_اشارہ_کی_شرط} پر مساوات \حوالہ{مساوات_میدانی_باریک_اشارہ_کی_شرط} میں بیان کئے باریک اشارے کی حد سے کم ہے۔
+حاصل ہوتا ہے۔اس قیمت سے \عددی{v_d} کو مزید بڑھانے سے برقی رو میں مزید تبدیلی رونما نہیں ہو گی۔اتنی ہی منفی داخلی برقی دباو کی صورت میں تمام کی تمام یک سمت برقی رو \عددی{Q_2} کو منتقل ہو جائے گی اور یوں \عددی{i_{DS1}=0} جبکہ \عددی{i_{DS2}=2I} ہوں گے۔شکل \حوالہ{شکل_تفرقی_داخلی_برقی_دباو_بالمقابل_برقی_رو} میں مساوات \حوالہ{مساوات_تفرقی_دونوں_ماسفیٹ_کا_برقی_رو} کے خط کھینچے گئے ہیں۔ان خطوط سے آپ دیکھ سکتے ہیں کہ \عددیء{v_d} کی وہ قیمت جس پر تمام کی تمام برقی رو ایک جانب منتقل ہو جاتی ہے  صفحہ \حوالہصفحہ{مساوات_میدانی_باریک_اشارہ_کی_شرط} پر مساوات \حوالہ{مساوات_میدانی_باریک_اشارہ_کی_شرط} میں بیان کئے باریک اشارے کی حد سے کم ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{differencePairInputVoltageVersusOutputCurrentCurveOctave}
@@ -1949,7 +1949,7 @@ V_{OS}&=\frac{V_O}{A_d}=- 2 \Delta V_t
 \caption{سادہ آئینے کی خارجی مزاحمت}
 \label{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت}
 \end{figure}
-شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت}-ا  میں   \عددی{V_G} یک سمتی رو دباو ہے لہٰذا دور کا ریاضی نمونہ بناتے ہوئے ہم \عددی{Q_2} کا پائے نمونہ استعمال کرتے ہوئے اس کے گیٹ کو (باریک اشاراتی استعمال کے لئے) برقی زمین پر تصور کرتے ہیں (شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت}-ب)۔ یوں \عددی{g_mv_{gs}=0} ہو گا لہٰذا \عددی{v_t=i_tr_0} یعنی  \عددی{R_0=\tfrac{v_t}{i_t}=r_0}   ہو گا۔
+شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت}-ا  میں   \عددی{V_G} یک سمت رو دباو ہے لہٰذا دور کا ریاضی نمونہ بناتے ہوئے ہم \عددی{Q_2} کا پائے نمونہ استعمال کرتے ہوئے اس کے گیٹ کو (باریک اشاراتی استعمال کے لئے) برقی زمین پر تصور کرتے ہیں (شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت}-ب)۔ یوں \عددی{g_mv_{gs}=0} ہو گا لہٰذا \عددی{v_t=i_tr_0} یعنی  \عددی{R_0=\tfrac{v_t}{i_t}=r_0}   ہو گا۔
 
 جیسے آپ جانتے ہیں کہ آئینے کی خارجی مزاحمت جتنی زیادہ ہو اتنا بہتر ہے۔آئیں ماسفیٹ کے ولسن آئینے پر غور کریں اور دیکھیں کہ اس کی خارجی مزاحمت کتنی حاصل ہوتی ہے۔
 \begin{figure}
