--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -26,7 +26,7 @@ B \approx f_H
 
 اس باب میں تمام مساوات \اصطلاح{لاپلاس بدل}\فرہنگ{لاپلاس بدل}\حاشیہب{Laplace transform}\فرہنگ{Laplace transform}  استعمال کرتے ہوئے \عددی{s} کے ساتھ لکھے جائیں گے۔سائن نما اشارات کے لئے \عددی{s}  کی جگہ \عددی{j \omega} لکھتے ہوئے جوابات حاصل کئے جاتے ہیں۔
 	
-\حصہ{بیس  سرے پر کپیسٹر \عددی{C_B}}ایمپلیفائر استعمال کرتے وقت اس کے داخلی اور خارجی جانب مختلف چیزیں جوڑی جا سکتی ہیں مثلاً لاوڈ سپیکر یا دوسرا ایمپلیفائر۔ایسی بیرونی اشیاء جوڑتے وقت یہ ضروری ہے کہ ٹرانزسٹر کا نقطہ کارکردگی اپنی جگہ برقرار رہے۔کپیسٹر یک سمتی برقی رو کے لئے کھلے سرے کردار ادا کرتا ہے لہٰذا کپیسٹر کے ذریعہ ایمپلیفائر کو داخلی جانب اشارہ فراہم کرنے یا ایمپلیفائر کے خارجی جانب سے کپیسٹر کے ذریعہ اشارہ حاصل کرنے سے ٹرانزسٹر کے نقطہ کارکردگی پر کوئی اثر نہیں ہوتا۔
+\حصہ{بیس  سرے پر کپیسٹر \عددی{C_B}}ایمپلیفائر استعمال کرتے وقت اس کے داخلی اور خارجی جانب مختلف چیزیں جوڑی جا سکتی ہیں مثلاً لاوڈ سپیکر یا دوسرا ایمپلیفائر۔ایسی بیرونی اشیاء جوڑتے وقت یہ ضروری ہے کہ ٹرانزسٹر کا نقطہ کارکردگی اپنی جگہ برقرار رہے۔کپیسٹر یک سمت برقی رو کے لئے کھلے سرے کردار ادا کرتا ہے لہٰذا کپیسٹر کے ذریعہ ایمپلیفائر کو داخلی جانب اشارہ فراہم کرنے یا ایمپلیفائر کے خارجی جانب سے کپیسٹر کے ذریعہ اشارہ حاصل کرنے سے ٹرانزسٹر کے نقطہ کارکردگی پر کوئی اثر نہیں ہوتا۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{amplifierWithCB}
@@ -127,7 +127,7 @@ f=\SI{1}{\kilo \hertz}
 $
 \end{enumerate}
 
-حل: یک سمتی  تجزیہ سے مندرجہ ذیل \عددی{g_m}، \عددی{r_{b'e}} اور \عددی{r_e} حاصل ہوتے ہیں۔
+حل: یک سمت  تجزیہ سے مندرجہ ذیل \عددی{g_m}، \عددی{r_{b'e}} اور \عددی{r_e} حاصل ہوتے ہیں۔
 \begin{align*}
 g_m&=\SI{4.064}{\milli \siemens}\\
 r_{be}&=\SI{44.045}{\kilo \ohm}\\
@@ -236,7 +236,7 @@ C_B&=\frac{1}{2 \pi f_L \left(R_{mCB} \right ) }\\
 \انتہا{مثال}
 %=========
 \حصہ{ایمٹر سرے پر کپیسٹر \عددی{C_E}}
-ٹرانزسٹر کا نقطہ کارکردگی تعین کرنے کے علاوہ \عددی{\beta}  میں تبدیلی سے  نقطہ کارکردگی میں تبدیلی رونما ہونے کو \عددی{R_E} کے استعمال سے کم کیا جاتا ہے۔البتہ ایمپلیفائر کی افزائش بڑھانے کے  لئے یہ ضروری ہے کہ ٹرانزسٹر کے ایمٹر سرے پر کم سے کم مزاحمت ہو۔ان دو متضاد شرائط پر پورا اترتا دور شکل \حوالہ{شکل_مخارج_کپیسٹر_کا_کردار} الف میں دکھایا گیا ہے۔چونکہ کپیسٹر \عددی{C_E} یک سمتی برقی رو کے لئے کھلے دور کا کردار ادا کرتا ہے لہٰذا اس کے استعمال سے یک سمتی متغیرات متاثر نہیں ہوتے۔\عددی{C_E} کو یوں چنا جاتا ہے کہ درکار تعدد پر اس کی \اصطلاح{برقی رکاوٹ}\فرہنگ{برقی!رکاوٹ}\حاشیہب{impedance} \عددی{R_E} سے کم ہو۔چونکہ \عددی{C_E} مزاحمت \عددی{R_E} کے متوازی جڑا ہے لہٰذا بدلتی رو کے نقطہ نظر سے ٹرانزسٹر کے ایمٹر پر کل رکاوٹ \عددی{R_E} سے کم ہو جاتی ہے اور یوں افزائش بڑھتی ہے۔اس حصے میں \عددی{C_E} پر توجہ رکھنے کی خاطر \عددی{C_B} اور \عددی{C_C} کا استعمال نہیں کیا گیا۔
+ٹرانزسٹر کا نقطہ کارکردگی تعین کرنے کے علاوہ \عددی{\beta}  میں تبدیلی سے  نقطہ کارکردگی میں تبدیلی رونما ہونے کو \عددی{R_E} کے استعمال سے کم کیا جاتا ہے۔البتہ ایمپلیفائر کی افزائش بڑھانے کے  لئے یہ ضروری ہے کہ ٹرانزسٹر کے ایمٹر سرے پر کم سے کم مزاحمت ہو۔ان دو متضاد شرائط پر پورا اترتا دور شکل \حوالہ{شکل_مخارج_کپیسٹر_کا_کردار} الف میں دکھایا گیا ہے۔چونکہ کپیسٹر \عددی{C_E} یک سمت برقی رو کے لئے کھلے دور کا کردار ادا کرتا ہے لہٰذا اس کے استعمال سے یک سمت متغیرات متاثر نہیں ہوتے۔\عددی{C_E} کو یوں چنا جاتا ہے کہ درکار تعدد پر اس کی \اصطلاح{برقی رکاوٹ}\فرہنگ{برقی!رکاوٹ}\حاشیہب{impedance} \عددی{R_E} سے کم ہو۔چونکہ \عددی{C_E} مزاحمت \عددی{R_E} کے متوازی جڑا ہے لہٰذا بدلتا رو کے نقطہ نظر سے ٹرانزسٹر کے ایمٹر پر کل رکاوٹ \عددی{R_E} سے کم ہو جاتی ہے اور یوں افزائش بڑھتی ہے۔اس حصے میں \عددی{C_E} پر توجہ رکھنے کی خاطر \عددی{C_B} اور \عددی{C_C} کا استعمال نہیں کیا گیا۔
 
 شکل \حوالہ{شکل_مخارج_کپیسٹر_کا_کردار} ب میں شکل \حوالہ{شکل_مخارج_کپیسٹر_کا_کردار} الف کا مساوی باریک اشاراتی دور دکھایا گیا ہے جس سے ہم افزائش کی مساوات لکھ سکتے ہیں۔باریک اشاراتی دور میں بیس  جانب کے مزاحمت کے عکس ایمٹر جانب دکھائے گئے ہیں۔جیسا کہ آپ جانتے ہیں کہ ایمٹر جانب کے مزاحمت کا عکس،  بیس  جانب \عددی{(\beta+1)} گنا زیادہ نظر آتا ہے جبکہ بیس  جانب مزاحمت کا عکس، ایمٹر جانب \عددی{(\beta+1)} گنا کم نظر آتا ہے۔یوں بیس  جانب کے مزاحمت \عددی{R_B} اور \عددی{r_{be}} کے عکس، ایمٹر جانب \عددی{\frac{R_B}{\beta+1}} اور \عددی{\frac{r_{be}}{\beta+1}} نظر آئیں گے۔
 \begin{gather} \label{مساوات_تعددی_ردعمل_مخارج_کپیسٹر_کا_کردار}
@@ -404,7 +404,7 @@ A_v=-43 \left(\frac{s+6666}{s+64068} \right )
 
 %====================================
 \حصہ{کلکٹر  سرے پر کپیسٹر \عددی{C_C}}
-ایمپلیفائر کا خارجی اشارہ کپیسٹر \عددی{C_C} کے ذریعہ حاصل کرنے سے یک سمتی متغیرات متاثر نہیں ہوتے۔شکل \حوالہ{شکل_محاصل_کپیسٹر_کے_اثرات} الف میں کلکٹر  سرے سے \عددی{C_C} کے ذریعہ خارجی اشارے کو درکار مقام یعنی \عددی{R_L} تک پہنچایا گیا ہے۔شکل \حوالہ{شکل_محاصل_کپیسٹر_کے_اثرات} ب میں اسی کا مساوی باریک اشاراتی دور دکھایا گیا۔
+ایمپلیفائر کا خارجی اشارہ کپیسٹر \عددی{C_C} کے ذریعہ حاصل کرنے سے یک سمت متغیرات متاثر نہیں ہوتے۔شکل \حوالہ{شکل_محاصل_کپیسٹر_کے_اثرات} الف میں کلکٹر  سرے سے \عددی{C_C} کے ذریعہ خارجی اشارے کو درکار مقام یعنی \عددی{R_L} تک پہنچایا گیا ہے۔شکل \حوالہ{شکل_محاصل_کپیسٹر_کے_اثرات} ب میں اسی کا مساوی باریک اشاراتی دور دکھایا گیا۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{amplifierWithCC}
@@ -1237,7 +1237,7 @@ C_M'=C \left(1-\frac{1}{A_V} \right)
 \label{شکل_تعددی_ردعمل_اندرونی_مزاحمت}
 \end{figure}
 
-شکل \حوالہ{شکل_تعددی_ردعمل_اندرونی_مزاحمت} میں ٹرانزسٹر کی ساخت دکھائی گئی ہے جہاں بیرونی سروں کو حسب معمول \عددی{E}، \عددی{B} اور \عددی{C} کہا گیا ہے۔ٹرانزسٹر کے بیس  کے بیرونی سرے \عددی{B} اور اندرونی نقطہ \عددی{B'} کے درمیان \اصطلاح{غیر مطلوب مزاحمت}\فرہنگ{غیر مطلوب مزاحمت}\حاشیہب{parasitic resistor}\فرہنگ{parasitic resistor} \عددی{r_{bb'}} پایا جاتا ہے۔یہ مزاحمت بیس  خطے کی خصوصیات پر منحصر ہوتا ہے۔اسی طرح ایمٹر    پر \عددی{r_{ee'}} اور کلکٹر  پر \عددی{r_{cc'}} غیر مطلوب مزاحمت پائے جاتے ہیں۔الٹ مائلبیس-ایمٹر    جوڑ میں الٹی جانب یک سمتی  برقی رو کو مزاحمت \عددی{r_{\mu}} سے ظاہر کیا جاتا ہے۔اس کتاب میں \عددیء{r_{cc'}}،\عددیء{r_{ee'}} اور \عددی{r_{\mu}} کو صفر تصور کرتے ہوئے نظر انداز کیا جائے گا۔  
+شکل \حوالہ{شکل_تعددی_ردعمل_اندرونی_مزاحمت} میں ٹرانزسٹر کی ساخت دکھائی گئی ہے جہاں بیرونی سروں کو حسب معمول \عددی{E}، \عددی{B} اور \عددی{C} کہا گیا ہے۔ٹرانزسٹر کے بیس  کے بیرونی سرے \عددی{B} اور اندرونی نقطہ \عددی{B'} کے درمیان \اصطلاح{غیر مطلوب مزاحمت}\فرہنگ{غیر مطلوب مزاحمت}\حاشیہب{parasitic resistor}\فرہنگ{parasitic resistor} \عددی{r_{bb'}} پایا جاتا ہے۔یہ مزاحمت بیس  خطے کی خصوصیات پر منحصر ہوتا ہے۔اسی طرح ایمٹر    پر \عددی{r_{ee'}} اور کلکٹر  پر \عددی{r_{cc'}} غیر مطلوب مزاحمت پائے جاتے ہیں۔الٹ مائلبیس-ایمٹر    جوڑ میں الٹی جانب یک سمت  برقی رو کو مزاحمت \عددی{r_{\mu}} سے ظاہر کیا جاتا ہے۔اس کتاب میں \عددیء{r_{cc'}}،\عددیء{r_{ee'}} اور \عددی{r_{\mu}} کو صفر تصور کرتے ہوئے نظر انداز کیا جائے گا۔  
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{transistorHighFreqPiModelA}
@@ -1849,7 +1849,7 @@ R_L&=\SI{10}{\kilo \ohm}, \hspace{5mm} r_i=\SI{100}{\ohm}
 \end{align*}
 ہیں۔ٹرانزسٹر کا \عددی{\beta=149}، \عددی{C_{b'e}=\SI{35}{\pico \farad}} اور \عددی{C_{b'c}=\SI{4}{\pico \farad}} ہیں۔بلند کونے کے تعدد حاصل کریں۔
 
-حل:پہلے یک سمتی  حل درکار ہے۔تھونن مساوی اجزاء حاصل  کرتے ہیں۔
+حل:پہلے یک سمت  حل درکار ہے۔تھونن مساوی اجزاء حاصل  کرتے ہیں۔
 \begin{align*}
 V_{BB}&=\frac{5+5}{6000+38000} \times 6000-5=\SI{-3.64}{\volt}\\
 R_B&=\frac{6000 \times 38000}{6000 +38000}=\SI{5.182}{\kilo \ohm}
@@ -1947,7 +1947,7 @@ A_v=\frac{v_L}{v_i}&=-3333 \times 0.0416 \times \frac{\frac{3600 \times 5182}{36
 \begin{align}
 C_M=\left(1+g_{m1} r_{e2} \right) C_{b'c}
 \end{align}
-حاصل ہوتا ہے۔چونکہ \عددی{Q_1} اور \عددی{Q_2} میں برابر یک سمتی برقی رو \عددی{I_{CQ}} گزرتا ہے لہٰذا \عددی{g_{m1}=g_{m2}=g_m=\frac{I_{CQ}}{V_T}} اور \عددی{r_{e1}=r_{e2}=\frac{1}{g_m}=r_e} ہوں گے۔آپ یہ بھی دیکھ سکتے ہیں کہ باریک اشاراتی برقی رو \عددی{i_{c1}=i_{e2} \approx i_{c2}} ہو گا۔یوں  \عددی{g_{m1} r_{e2} =1} لیتے ہوئے
+حاصل ہوتا ہے۔چونکہ \عددی{Q_1} اور \عددی{Q_2} میں برابر یک سمت برقی رو \عددی{I_{CQ}} گزرتا ہے لہٰذا \عددی{g_{m1}=g_{m2}=g_m=\frac{I_{CQ}}{V_T}} اور \عددی{r_{e1}=r_{e2}=\frac{1}{g_m}=r_e} ہوں گے۔آپ یہ بھی دیکھ سکتے ہیں کہ باریک اشاراتی برقی رو \عددی{i_{c1}=i_{e2} \approx i_{c2}} ہو گا۔یوں  \عددی{g_{m1} r_{e2} =1} لیتے ہوئے
 \begin{align}
 C_M=\left(1+1 \right) C_{b'c}=2 C_{b'c}
 \end{align}
@@ -2055,11 +2055,11 @@ C_{b'e}&=\SI{30}{\pico \farad}, \hspace{5mm} C_{b'c}=\SI{3}{\pico \farad}, \hspa
 \end{align*}
 ہیں۔کیسکوڈ ایمپلیفائر کے تمام یکمستی متغیرات ٹھیک ٹھیک حاصل کریں۔
 
-حل:شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر_یکسمتی_متغیرات} میں اس کا یک سمتی  دور دکھایا گیا ہے جہاں \عددی{Q_1} اور \عددی{Q_2} کے بیس  جانب مسئلہ تھونن  سے حاصل مساوی ادوار نسب کر دئے گئے ہیں۔
+حل:شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر_یکسمتی_متغیرات} میں اس کا یک سمت  دور دکھایا گیا ہے جہاں \عددی{Q_1} اور \عددی{Q_2} کے بیس  جانب مسئلہ تھونن  سے حاصل مساوی ادوار نسب کر دئے گئے ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{cascodeAmplifierDCanalysis}
-\caption{کیسکوڈ ایمپلیفائر کے یک سمتی  متغیرات}
+\caption{کیسکوڈ ایمپلیفائر کے یک سمت  متغیرات}
 \label{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر_یکسمتی_متغیرات}
 \end{figure}
 
@@ -2112,19 +2112,19 @@ V_{CE2}&=V_{C2}-V_{E2}=11.79-6.275=\SI{5.55}{\volt}
 \end{align*}
 حاصل ہوتے ہیں۔چونکہ دونوں \عددی{V_{CE}} کے قیمتیں \عددی{\SI{0.2}{\volt}} سے زیادہ ہے لہٰذا دونوں ٹرانزسٹر افزائندہ ہیں۔
 
-یہ تمام معلومات حاصل کرتے وقت ہم تصور کر رہے تھے کہ دونوں ٹرانزسٹر افزائندہ ہیں۔فرض کریں کہ \عددی{R_1'} اور \عددی{R_2'} کے قیمتیں یوں چنی جائیں کہ \عددی{V_{E2}} کی قیمت اتنی گر جائے کہ \عددی{Q_1} افزائندہ نہ رہ سکے تب یہ تمام حساب کتاب غلط ہو گا اور کیسکوڈ ایمپلیفائر صحیح کام نہیں کرے گا۔تخلیق دیتے وقت اس بات کا خیال رکھا جاتا ہے کہ دونوں ٹرانزسٹر یک سمتی  برقی رو گزارتے ہوئے افزائندہ رہیں۔
+یہ تمام معلومات حاصل کرتے وقت ہم تصور کر رہے تھے کہ دونوں ٹرانزسٹر افزائندہ ہیں۔فرض کریں کہ \عددی{R_1'} اور \عددی{R_2'} کے قیمتیں یوں چنی جائیں کہ \عددی{V_{E2}} کی قیمت اتنی گر جائے کہ \عددی{Q_1} افزائندہ نہ رہ سکے تب یہ تمام حساب کتاب غلط ہو گا اور کیسکوڈ ایمپلیفائر صحیح کام نہیں کرے گا۔تخلیق دیتے وقت اس بات کا خیال رکھا جاتا ہے کہ دونوں ٹرانزسٹر یک سمت  برقی رو گزارتے ہوئے افزائندہ رہیں۔
 \انتہا{مثال}
 %=============
 \ابتدا{مثال}
 مثال \حوالہ{مثال_تعددی_ردعمل_کیسکوڈ_افزائش_انقطاعی_تعدد} میں دئے معلومات کو استعمال کرتے ہوئے کیسکوڈ ایمپلیفائر کی درمیانی تعدد پر افزائش \عددی{A_v} اور بلند انقطاعی تعدد \عددی{f_H} حاصل کریں۔
 
-حل:\عددی{Q_1} کا یک سمتی  برقی رو \عددی{I_{C1}}
+حل:\عددی{Q_1} کا یک سمت  برقی رو \عددی{I_{C1}}
 \begin{align*}
 V_{BB}&=\frac{24000 \times 20}{24000+120000}=\SI{3.333}{\volt}\\
 R_B&=\frac{24000 \times 120000}{24000+120000}=\SI{20}{\kilo \ohm}\\
 I_{C1} &\approx I_{E1}=\frac{3.333-0.7}{\frac{20000}{99+1}+2000}=\SI{1.197}{\milli \ampere}
 \end{align*}
-حاصل ہوتا ہے۔یہی یک سمتی  برقی رو \عددی{Q_2} میں سے بھی گزرے گا۔یوں
+حاصل ہوتا ہے۔یہی یک سمت  برقی رو \عددی{Q_2} میں سے بھی گزرے گا۔یوں
 \begin{align*}
 g_{m1}&=g_{m2}=g_m=\frac{1.197 \times 10^{-3}}{25 \times 10^{-3}}=\SI{47.88}{\milli \siemens}\\
 r_{be1}& =r_{be2}=r_{be} \approx \frac{99}{0.04788}=\SI{2067}{\ohm}
@@ -2158,7 +2158,7 @@ f_H&=\frac{293000000}{2 \pi}=\SI{46.6}{\mega \hertz}
 \label{شکل_تعددی_ردعمل_مشترک_مخارج_مکمل_تعددی_ردعمل}
 \end{figure}
 
-حل:یک سمتی  تجزیہ سے \عددی{V_{BB}=\SI{3}{\volt}} اور \عددی{R_B=\SI{26.666}{\ohm}} حاصل ہوتے ہیں جس سے \عددی{I_C=\SI{0.507}{\milli \ampere}} حاصل ہوتا ہے۔یوں \عددی{g_m=\SI{0.02}{\siemens}}، \عددی{r_e=\SI{50}{\ohm}} اور \عددی{r_{b'e}=\SI{2500}{\ohm}} ہیں۔
+حل:یک سمت  تجزیہ سے \عددی{V_{BB}=\SI{3}{\volt}} اور \عددی{R_B=\SI{26.666}{\ohm}} حاصل ہوتے ہیں جس سے \عددی{I_C=\SI{0.507}{\milli \ampere}} حاصل ہوتا ہے۔یوں \عددی{g_m=\SI{0.02}{\siemens}}، \عددی{r_e=\SI{50}{\ohm}} اور \عددی{r_{b'e}=\SI{2500}{\ohm}} ہیں۔
 
 مساوات \حوالہ{مساوات_تعددی_ردعمل_کپیسٹر_کا_تخمینہ} کی مدد سے \عددی{f_T} کو استعمال کرتے ہوئے \عددی{C_{b'e}} یوں حاصل ہوتا ہے
 \begin{align*}
@@ -2686,7 +2686,7 @@ r_{be}&=\frac{\beta V_T}{I_{CQ}}
 \انتہا{سوال}
 %===========
 \ابتدا{سوال}
-شکل \حوالہ{شکل_تعددی_ردعمل_سوال_مشترک_مخارج_افزائش_دائرہ} میں \عددی{\tfrac{i_L}{i_i}=\SI{34}{\deci \bel}} اور بلند انقطاعی تعدد \عددی{\SI{1.2}{\mega \hertz}} ناپا جاتا ہے۔یک سمتی  برقی رو \عددی{I_{CQ}=\SI{2}{\milli \ampere}} ہے۔\عددیء{r_{bb'}} اور \عددی{C_{b'c}} کو صفر تصور کرتے ہوئے \عددیء{\beta}، \عددی{f_T}، \عددی{r_{b'e}} اور \عددی{C_{b'e}} حاصل کریں۔  
+شکل \حوالہ{شکل_تعددی_ردعمل_سوال_مشترک_مخارج_افزائش_دائرہ} میں \عددی{\tfrac{i_L}{i_i}=\SI{34}{\deci \bel}} اور بلند انقطاعی تعدد \عددی{\SI{1.2}{\mega \hertz}} ناپا جاتا ہے۔یک سمت  برقی رو \عددی{I_{CQ}=\SI{2}{\milli \ampere}} ہے۔\عددیء{r_{bb'}} اور \عددی{C_{b'c}} کو صفر تصور کرتے ہوئے \عددیء{\beta}، \عددی{f_T}، \عددی{r_{b'e}} اور \عددی{C_{b'e}} حاصل کریں۔  
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{npnGainBandwidthQuestionCommonEmitterA}
