--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -24,7 +24,7 @@
 
 جیسا کہ آپ دیکھیں گے گیٹ اور سورس سروں کے مابین \اصطلاح {برقی دباو کی شدت}\حاشیہد{MOSFET کے نام کے پہلے تین مخفف یعنی MOS اس کی ساخت یعنی Semiconductor Oxide Metal سے حاصل کئے گئے ہیں جبکہ بقایا مخفف یعنی FET برقی دباو کی شدت سے چلنے کے عمل یعنی Transistor Effect Field سے لئے گئے ہیں۔}  کے ذریعہ سلیکان کی پتری میں، گیٹ کے نیچے، سورس اور ڈرین خطوں کے مابین برقی رو کے لئے \اصطلاح {راہ}\فرہنگ{راہ}\فرہنگ{channel}\حاشیہب{channel}  پیدا کی جاتی ہے۔اس راہ کے مقام کو شکل  ت میں دکھایا گیا ہے۔سورس اور ڈرین سروں کے مابین برقی دباو لاگو کرنے سے اس راہ میں برقی رو کا گزر ہوتا ہے۔جیسا کہ شکل سے واضح ہے اس راہ کی لمبائی \عددی{L} اور چوڑائی \عددی{W} ہو گی۔راہ کی لمبائی عموماً \عددی{\SI{1}{\micro \meter}}   تا \عددی{\SI{10}{\micro \meter}} جبکہ اس کی چوڑائی \عددی{\SI{2}{\micro \meter}} تا \عددی{\SI{500}{\micro \meter}} ہوتی ہے۔
 
-دو جوڑ ٹرانزسٹر میں بیس پر لاگو برقی رو کی مدد سے ٹرانزسٹر میں برقی رو \عددی{I_C} کو قابو کیا جاتا ہے جہاں بیس میں \عددی{\frac{I_C}{\beta}} برقی رو درکار ہوتی ہے۔اس کے برعکس ماسفیٹ کے گیٹ  اور بقایا حصوں کے درمیان غیر موصل \عددی{\mathrm{SiO_2}} پایا جاتا ہے جس میں برقی رو کا گزر تقریباً ناممکن ہوتا ہے۔حقیقت میں گیٹ میں یک سمتی برقی رو کی مقدار \عددی{10^{-15}} ایمپیئر کے لگ بھگ  ہوتی ہے جو ایک قابلِ نظر انداز مقدار ہے۔
+دو جوڑ ٹرانزسٹر میں بیس پر لاگو برقی رو کی مدد سے ٹرانزسٹر میں برقی رو \عددی{I_C} کو قابو کیا جاتا ہے جہاں بیس میں \عددی{\frac{I_C}{\beta}} برقی رو درکار ہوتی ہے۔اس کے برعکس ماسفیٹ کے گیٹ  اور بقایا حصوں کے درمیان غیر موصل \عددی{\mathrm{SiO_2}} پایا جاتا ہے جس میں برقی رو کا گزر تقریباً ناممکن ہوتا ہے۔حقیقت میں گیٹ میں یک سمت برقی رو کی مقدار \عددی{10^{-15}} ایمپیئر کے لگ بھگ  ہوتی ہے جو ایک قابلِ نظر انداز مقدار ہے۔
 
 دو جوڑ ٹرانزسٹر کے برعکس میدانی ٹرانزسٹروں میں دونوں \عددی{n+} خطے بالکل یکساں ہوتے ہیں اور ان میں کسی ایک کو بطور سورس اور دوسرے کو ڈرین خطہ استعمال کیا جا سکتا ہے۔ 
 
@@ -538,8 +538,8 @@ v_{GD} \le V_t
 \end{figure}
 
 %====================
-\حصہ{ماسفیٹ کے یک سمتی ادوار کا حل}
-اس حصے میں ماسفیٹ کے یک سمتی ادوار حل کئے جائیں گے۔جیسے اس کتاب کے شروع میں بتلایا گیا ہے، یک سمتی متغیرات انگریزی کے بڑے حروف سے ظاہر کئے جاتے ہیں۔یوں گیٹ پر برقی دباو کو \عددی{v_{GS}} کی جگہ \عددی{V_{GS}} لکھا جائے گا۔اسی طرح \عددی{v_{DS}} کو \عددی{V_{DS}} اور \عددی{i_{DS}} کو \عددی{I_{DS}} لکھا جائے گا۔
+\حصہ{ماسفیٹ کے یک سمت ادوار کا حل}
+اس حصے میں ماسفیٹ کے یک سمت ادوار حل کئے جائیں گے۔جیسے اس کتاب کے شروع میں بتلایا گیا ہے، یک سمت متغیرات انگریزی کے بڑے حروف سے ظاہر کئے جاتے ہیں۔یوں گیٹ پر برقی دباو کو \عددی{v_{GS}} کی جگہ \عددی{V_{GS}} لکھا جائے گا۔اسی طرح \عددی{v_{DS}} کو \عددی{V_{DS}} اور \عددی{i_{DS}} کو \عددی{I_{DS}} لکھا جائے گا۔
 
 اس حصے میں دئے گئے مثالوں کو پہلے خود حل کرنے کی کوشش کریں اور بعد میں کتاب میں دئے حل دیکھیں۔
 
@@ -628,7 +628,7 @@ i_{DS}&=k_n \left[\left(v_{GS}-V_t \right )v_{DS}-\frac{v_{DS}^{2}}{2} \right ]\
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{mosfetDCcircuitsA}
-\caption{ماسفیٹ کے یک سمتی ادوار}
+\caption{ماسفیٹ کے یک سمت ادوار}
 \label{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_الف}
 \end{figure}
 
@@ -683,7 +683,7 @@ I_{DS}&=1.26\mp j 0.46 \,{\milli \ampere}
 \انتہا{مثال}
 %========
 \ابتدا{مثال} \شناخت{مثال_میدانی_گیٹ_اور_محاصل_جڑے}
-شکل \حوالہ{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_الف} پ میں منفی بڑھاتا ماسفیٹ کے ڈرین اور گیٹ جوڑ کر یک سمتی دور بنایا گیا ہے۔اس ماسفیٹ کا \عددی{V_t=\SI{3}{\volt}} اور \عددی{k_n=\SI{0.2}{\milli \ampere \volt^{-2}}} ہیں  جبکہ دور میں \عددی{V_{DD}=\SI{10}{\volt}}  ہے۔دور میں برقی رو حاصل کریں۔
+شکل \حوالہ{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_الف} پ میں منفی بڑھاتا ماسفیٹ کے ڈرین اور گیٹ جوڑ کر یک سمت دور بنایا گیا ہے۔اس ماسفیٹ کا \عددی{V_t=\SI{3}{\volt}} اور \عددی{k_n=\SI{0.2}{\milli \ampere \volt^{-2}}} ہیں  جبکہ دور میں \عددی{V_{DD}=\SI{10}{\volt}}  ہے۔دور میں برقی رو حاصل کریں۔
 
 حل:	گیٹ اور ڈرین جوڑنے سے گیٹ اور ڈرین برابر برقی دباو پر ہوں گے یعنی 
 \begin{align*}
@@ -873,7 +873,7 @@ R_D=\frac{V_{DD}-V_{D}}{I_{DS}}=\frac{15-2}{2 \times 10^{-3}}=\SI{6.5}{\kilo \oh
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{mosfetDCcircuitsB}
-\caption{ماسفیٹ کے مزید یک سمتی ادوار}
+\caption{ماسفیٹ کے مزید یک سمت ادوار}
 \label{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_ب}
 \end{figure}
 \انتہا{مثال}
@@ -1016,7 +1016,7 @@ V_G&=\SI{1}{\volt}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{pMosfetDCcircuitsA}
-\caption{\عددی{p} ماسفیٹ کے یک سمتی ادوار}
+\caption{\عددی{p} ماسفیٹ کے یک سمت ادوار}
 \label{شکل_جمع_ماسفیٹ_کے_یک_سمتی_ادوار_الف}
 \end{figure}
 \عددی{R_{G1}} اور \عددی{R_{G2}} کے قیمتیں چن کر \عددی{V_G=\SI{1}{\volt}}  حاصل کیا جا سکتا ہے۔مثلاً اگر \عددی{R_{G1}=\SI{1}{\mega \ohm}} چنا جائے تو
@@ -1094,7 +1094,7 @@ V_{GD}=V_G-V_D=0-4.328=\SI{-4.328}{\volt}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{mosfetDCcircuitsC}
-\caption{ماسفیٹ کے یک سمتی ادوار}
+\caption{ماسفیٹ کے یک سمت ادوار}
 \label{شکل_ماسفیٹ_کے_یک_سمتی_ادوار_پ}
 \end{figure}
 \انتہا{مثال}
@@ -1141,16 +1141,16 @@ I_{DS2}=\frac{k_n}{2} \left(V_{GS2}-V_t \right )^2
 \label{شکل_ماسفیٹ_ایمپلیفائر_ترسیمی_تجزیہ}
 \end{figure}
 
-شکل \حوالہ{شکل_ماسفیٹ_ایمپلیفائر_ترسیمی_تجزیہ} میں نقطہ کارکردگی ماسفیٹ کے گیٹ پر برقی دباو \عددیء{V_{GSQ}}، بوجھ کی مزاحمت \عددی{R_D} اور برقی دباو کی منبع \عددی{V_{DD}} تعین کرتے ہیں۔\عددی{v_i=0} ہونے کی صورت میں ماسفیٹ نقطہ کارکردگی پر پایا جائے گا جہاں اس کے یک سمتی برقی دباو \عددیء{V_{DSQ}} اور یک سمتی برقی رو \عددی{I_{DSQ}} ہوں گے۔اب تصور کریں کہ باریک اشارہ \عددی{v_i} مثبت جانب بڑھتا ہے۔یوں ماسفیٹ کے گیٹ پر کل برقی دباو \عددی{V_{GSQ}} سے بڑھ جائے گا جس سے  \عددی{i_{DS}} بڑھ جائے گی جبکہ \عددی{v_{DS}} گھٹ جائے گا۔اسی طرح اگر \عددی{v_i} منفی ہوتا ہے تو گیٹ پر برقی دباو گھٹے گا جس سے \عددی{i_{DS}} گھٹے گی جبکہ \عددی{v_{DS}} بڑھے گا۔شکل میں سائن نما \عددی{v_i} کی صورت میں ایسا ہوتا دکھایا گیا ہے۔آپ دیکھ سکتے ہیں کہ خطِ بوجھ کی ڈھلوان کم کرنے سے \عددی{v_{ds}} بڑھتا ہے۔\عددی{\tfrac{v_{ds}}{v_i}} اس ایمپلیفائر کی افزائش برقی دباو \عددی{A_v} ہے۔
+شکل \حوالہ{شکل_ماسفیٹ_ایمپلیفائر_ترسیمی_تجزیہ} میں نقطہ کارکردگی ماسفیٹ کے گیٹ پر برقی دباو \عددیء{V_{GSQ}}، بوجھ کی مزاحمت \عددی{R_D} اور برقی دباو کی منبع \عددی{V_{DD}} تعین کرتے ہیں۔\عددی{v_i=0} ہونے کی صورت میں ماسفیٹ نقطہ کارکردگی پر پایا جائے گا جہاں اس کے یک سمت برقی دباو \عددیء{V_{DSQ}} اور یک سمت برقی رو \عددی{I_{DSQ}} ہوں گے۔اب تصور کریں کہ باریک اشارہ \عددی{v_i} مثبت جانب بڑھتا ہے۔یوں ماسفیٹ کے گیٹ پر کل برقی دباو \عددی{V_{GSQ}} سے بڑھ جائے گا جس سے  \عددی{i_{DS}} بڑھ جائے گی جبکہ \عددی{v_{DS}} گھٹ جائے گا۔اسی طرح اگر \عددی{v_i} منفی ہوتا ہے تو گیٹ پر برقی دباو گھٹے گا جس سے \عددی{i_{DS}} گھٹے گی جبکہ \عددی{v_{DS}} بڑھے گا۔شکل میں سائن نما \عددی{v_i} کی صورت میں ایسا ہوتا دکھایا گیا ہے۔آپ دیکھ سکتے ہیں کہ خطِ بوجھ کی ڈھلوان کم کرنے سے \عددی{v_{ds}} بڑھتا ہے۔\عددی{\tfrac{v_{ds}}{v_i}} اس ایمپلیفائر کی افزائش برقی دباو \عددی{A_v} ہے۔
 
 \حصہ{ماسفیٹ ایمپلیفائر کا تحلیلی تجزیہ}
 شکل \حوالہ{شکل_ماسفیٹ_ایمپلیفائر_الف}  میں بڑھاتا ماسفیٹ کو استعمال کرتے ہوئے ایمپلیفائر کا دور بنایا گیا ہے جس میں دو عدد منبع برقی دباو \عددی{V_{DD}}  اور \عددی{V_{GS}} ماسفیٹ کو مائل کرنے کی خاطر استعمال کئے گئے ہیں۔جیسا کہ ہم اسی باب میں آگے دیکھیں گے، حقیقت میں عموماً ایسا نہیں کیا جاتا۔بہر حال اس دور کی مدد سے ایمپلیفائر پر غور کرنا نسبتاً آسان ہے۔
 
-اس دور میں داخلی جانب یک سمتی منبع \عددی{V_{GS}} کے ساتھ سلسلہ وار بدلتا اشارہ \عددی{v_{gs}} منسلک کیا گیا ہے۔اس دور کا مقصد داخلی اشارہ \عددی{v_{gs}} کا حیطہ بڑھانا ہے۔بڑھایا گیا اشارہ ماسفیٹ کے ڈرین سے حاصل کیا جائے گا۔
+اس دور میں داخلی جانب یک سمت منبع \عددی{V_{GS}} کے ساتھ سلسلہ وار بدلتا اشارہ \عددی{v_{gs}} منسلک کیا گیا ہے۔اس دور کا مقصد داخلی اشارہ \عددی{v_{gs}} کا حیطہ بڑھانا ہے۔بڑھایا گیا اشارہ ماسفیٹ کے ڈرین سے حاصل کیا جائے گا۔
 
 مندرجہ ذیل بحث گزشتہ باب میں ٹرانزسٹر پر بحث کے ہو بہو ہے۔
 
-\جزوحصہ{یک سمتی تجزیہ}
+\جزوحصہ{یک سمت تجزیہ}
  ماسفیٹ کا نقطہ کارکردگی حاصل کرنے کی خاطر بدلتے اشارہ کو قصر دور کیا جاتا ہے یعنی اس کی قیمت صفر کر دی جاتی ہے۔یوں
 \begin{align} \label{مساوات_میدانی_یکسمتی_رو}
 I_{DS}=\frac{k_n}{2} \left(V_{GS}-V_t \right )^2
@@ -1164,8 +1164,8 @@ V_{DS}=V_{DD}-I_{DS}R_D
 V_{GS}-V_{DS}<V_t
 \end{align*}
 کا ہونا ضروری ہے۔
-\جزوحصہ{بدلتی رو تجزیہ}
-بدلتی رو تجزیہ کی خاطر دور میں \عددی{v_{gs}} پر نظر رکھی جائے گی۔شکل \حوالہ{شکل_ماسفیٹ_ایمپلیفائر_الف}  میں  \عددی{V_{GS}} اور \عددی{v_{gs}} سلسلہ وار جوڑنے سے
+\جزوحصہ{بدلتا رو تجزیہ}
+بدلتا رو تجزیہ کی خاطر دور میں \عددی{v_{gs}} پر نظر رکھی جائے گی۔شکل \حوالہ{شکل_ماسفیٹ_ایمپلیفائر_الف}  میں  \عددی{V_{GS}} اور \عددی{v_{gs}} سلسلہ وار جوڑنے سے
 \begin{align}
 v_{GS}=V_{GS}+v_{gs}
 \end{align}
@@ -1190,7 +1190,7 @@ i_{DS}&=\frac{k_n}{2} \left(V_{GS}+v_{gs}-V_t \right )^2\\
 &=\frac{k_n}{2} \left(V_{GS}-V_t \right )^2+k_n \left(V_{GS}-V_t \right ) v_{gs}+ \frac{k_n}{2} v_{gs}^{2} 
 \end{aligned}
 \end{gather}
-حاصل ہوتا ہے۔اس مساوات کا پہلا جزو \عددی{\frac{k_n}{2}\left(V_{GS}-V_t \right )^2}   یک سمتی جزو ہے۔ یہ مساوات \حوالہ{مساوات_میدانی_یکسمتی_رو}  میں دئے  \عددی{I_{DS}} کے برابر ہے اور یوں اسے \عددی{I_{DS}} لکھا جا سکتا ہے۔مساوات کا دوسرا جزو \عددی{k_n \left(V_{GS}-V_t \right) v_{gs} }  بدلتی رو جزو ہے۔یہ جزو داخلی اشارہ کا  \عددی{k_n \left (V_{GS}-V_t \right )} گنّا بڑھایا جزو ہے اور یوں اسے \عددی{i_{ds}}  لکھا جا سکتا ہے۔مساوات کا تیسرا جزو \عددی{v_{gs}} کے مربع کے راست تناسب ہے اور یوں یہ جزو اشارہ کی \اصطلاح {شکل بگاڑتا}\فرہنگ{شکل بگاڑنا}\فرہنگ{distortion}\حاشیہب{distortion}  ہے۔یہ آخری جزو  \عددی{ \frac{k_n}{2}v_{gs}^2} نا گوارہ جزو ہے۔اشارہ کی اصل شکل برقرار رکھنے کی خاطر اس جزو کی قیمت دوسرے جزو سے بہت کم رکھنی ضروری ہے یعنی
+حاصل ہوتا ہے۔اس مساوات کا پہلا جزو \عددی{\frac{k_n}{2}\left(V_{GS}-V_t \right )^2}   یک سمت جزو ہے۔ یہ مساوات \حوالہ{مساوات_میدانی_یکسمتی_رو}  میں دئے  \عددی{I_{DS}} کے برابر ہے اور یوں اسے \عددی{I_{DS}} لکھا جا سکتا ہے۔مساوات کا دوسرا جزو \عددی{k_n \left(V_{GS}-V_t \right) v_{gs} }  بدلتا رو جزو ہے۔یہ جزو داخلی اشارہ کا  \عددی{k_n \left (V_{GS}-V_t \right )} گنّا بڑھایا جزو ہے اور یوں اسے \عددی{i_{ds}}  لکھا جا سکتا ہے۔مساوات کا تیسرا جزو \عددی{v_{gs}} کے مربع کے راست تناسب ہے اور یوں یہ جزو اشارہ کی \اصطلاح {شکل بگاڑتا}\فرہنگ{شکل بگاڑنا}\فرہنگ{distortion}\حاشیہب{distortion}  ہے۔یہ آخری جزو  \عددی{ \frac{k_n}{2}v_{gs}^2} نا گوارہ جزو ہے۔اشارہ کی اصل شکل برقرار رکھنے کی خاطر اس جزو کی قیمت دوسرے جزو سے بہت کم رکھنی ضروری ہے یعنی
 \begin{align*}
 \frac{k_n}{2}v_{gs}^2 \ll k_n \left(V_{GS}-V_t \right )v_{gs}
 \end{align*}
@@ -1317,7 +1317,7 @@ V_A \propto L_{\text{راہ}}
 \begin{align} \label{مساوات_میدانی_موصلیت_نما}
 g_m = \left. \frac{\partial i_{DS}}{\partial v_{GS}} \right |_{V_{GS}}=k_n \left[V_{GS}-V_t \right ]
 \end{align}
-حاصل ہوتا ہے۔مساوات \حوالہ{مساوات_میدانی_افزائندہ_رو}  کی یک سمتی شکل
+حاصل ہوتا ہے۔مساوات \حوالہ{مساوات_میدانی_افزائندہ_رو}  کی یک سمت شکل
 \begin{align*}
 I_{DS}=\frac{k_n}{2}\left(V_{GS}-V_t \right)^2
 \end{align*}
@@ -1402,8 +1402,8 @@ i_d&=i_s=i_{ds}=g_m v_{gs}
 دو جوڑ ٹرانزسٹر کے ٹی ریاضی نمونے کی طرح  شکل \حوالہ{شکل_ماسفیٹ_ٹی_ماڈل} میں دکھائے گئے ماسفیٹ کے ٹی ریاضی نمونے دونوں اقسام کے ماسفیٹ یعنی \تحریر{nMOSFET} اور \تحریر{pMOSFET} کے لئے قابل استعمال ہیں۔
  
 
-\جزوحصہ{یک سمتی اور بدلتے متغیرات کی علیحدگی}
-مندرجہ بالا تذکرہ سے ہم دیکھتے ہیں کہ برقی دباو اور برقی رو کے دو حصے (یعنی یک سمتی حصہ اور بدلتا حصہ) ہوتے ہے۔ماسفیٹ کے ادوار حل کرتے وقت ان دو حصوں کو علیحدہ علیحدہ حل کیا جاتا ہے۔پہلے بدلتے متغیرات کی قیمتیں صفر کرتے ہوئے یک سمتی حصہ حل کر کے نقطہ مائل حاصل کیا جاتا ہے اور پھر بدلتے حصے کو ریاضی نمونے کی مدد سے حل کیا جاتا ہے۔
+\جزوحصہ{یک سمت اور بدلتے متغیرات کی علیحدگی}
+مندرجہ بالا تذکرہ سے ہم دیکھتے ہیں کہ برقی دباو اور برقی رو کے دو حصے (یعنی یک سمت حصہ اور بدلتا حصہ) ہوتے ہے۔ماسفیٹ کے ادوار حل کرتے وقت ان دو حصوں کو علیحدہ علیحدہ حل کیا جاتا ہے۔پہلے بدلتے متغیرات کی قیمتیں صفر کرتے ہوئے یک سمت حصہ حل کر کے نقطہ مائل حاصل کیا جاتا ہے اور پھر بدلتے حصے کو ریاضی نمونے کی مدد سے حل کیا جاتا ہے۔
 %=========
 \ابتدا{مثال}
 مساوات \حوالہ{مساوات_میدانی_رو_کے_حصے} میں \عددی{\tfrac{k_n v_{gs}^2}{2}} نا پسندیدہ حصہ ہے۔اگر داخلی اشارہ \عددی{v_{gs}=V_p \cos \omega t} ہو تب نا پسندیدہ جزو میں \عددی{\cos ^2 \omega t=\tfrac{1+\cos (2 \omega t)}{2}} استعمال کرتے ہوئے  \عددی{\tfrac{k_n V_p^2}{4} \left[1+\cos (2 \omega t) \right]} لکھا جا سکتا ہے جو داخلی اشارے کے دگنی تعدد کا جزو  ہے۔یہی اصل اشارے کی شکل \اصطلاح {بگاڑتا} ہے۔خارجی اشارے میں دگنی تعدد اور اصل تعدد کے اجزاء کے حیطوں کی نسبت حاصل کریں۔اگر \عددی{V_t=\SI{1.4}{\volt}} اور \عددی{V_{GS}=\SI{4}{\volt}} ہوں تب داخلی اشارے کی چوٹی کی وہ حد حاصل کریں جس پر حاصل کردہ نسبت \عددی{\SI{1}{\percent}} ہو۔
@@ -1539,7 +1539,7 @@ R_i=\frac{v_s}{i_s}=\frac{R_G}{3.823}=\SI{2.6}{\mega \ohm}
 \label{شکل_ماسفیٹ_مخارج_مزاحمت_کے_ساتھ}
 \end{figure}
 
-حل:یک سمتی تجزیہ سے \عددیء{I_{DS}=\SI{0.6}{\milli \ampere}}، \عددی{V_{GS}=\SI{1.8}{\volt}} اور \عددی{V_{DS}=\SI{5.38}{\volt}} حاصل ہوتے ہیں۔یوں ماسفیٹ افزائندہ خطے میں ہے۔انہیں استعمال کرتے ہوئے
+حل:یک سمت تجزیہ سے \عددیء{I_{DS}=\SI{0.6}{\milli \ampere}}، \عددی{V_{GS}=\SI{1.8}{\volt}} اور \عددی{V_{DS}=\SI{5.38}{\volt}} حاصل ہوتے ہیں۔یوں ماسفیٹ افزائندہ خطے میں ہے۔انہیں استعمال کرتے ہوئے
 \begin{align*}
 g_m=\sqrt{2 k_n I_{DS}}=\sqrt{2 \times 1.2 \times 10^{-3} \times 0.6 \times 10^{-3}}=\SI{1.2}{\milli \siemens}
 \end{align*}
@@ -1784,7 +1784,7 @@ i_{DS}=I_{DSS} \left(1-\frac{v_{GS}}{V_p} \right)^2 \left(1+\frac{v_{DS}}{V_A} \
 g_m &=\left(\frac{-2  I_{DSS}}{V_p} \right) \left(1-\frac{V_{GS}}{V_p} \right) \\
 &=\left(\frac{-2  I_{DSS}}{V_p} \right)  \sqrt{\frac{I_D}{I_{DSS}}}
 \end{align} 
-کے برابر ہے جہاں \عددی{I_D} نقطہ مائل پر یک سمتی برقی رو ہے۔اسی طرح
+کے برابر ہے جہاں \عددی{I_D} نقطہ مائل پر یک سمت برقی رو ہے۔اسی طرح
 \begin{align}
 r_o=\frac{V_A}{I_D}
 \end{align} 
@@ -1895,7 +1895,7 @@ R_S&=\frac{4.628}{5 \times 10^{-3}}=\SI{925.6}{\ohm}
 R_i&=\frac{R_1 R_2}{R_1+R_2}=\SI{293}{k \ohm}\\
 R_o&=R_D=\SI{1.2}{k \ohm}
 \end{align*}
-حاصل ہوتے ہیں۔آپ دیکھ سکتے ہیں کہ \عددی{R_i} کا دارومدار گیٹ پر نسب مزاحمتوں پر ہے۔یوں داخلی مزاحمت بڑھانے کی خاطر ان مزاحمتوں کو زیادہ سے زیادہ رکھا جاتا ہے جس کا مطلب ہے کہ ان میں گزرتے یک سمتی رو کو کم سے کم رکھا جاتا ہے۔اس مثال میں اس برقی رو کو \عددی{\SI{10}{\micro \ampere}}  رکھا گیا ہے۔
+حاصل ہوتے ہیں۔آپ دیکھ سکتے ہیں کہ \عددی{R_i} کا دارومدار گیٹ پر نسب مزاحمتوں پر ہے۔یوں داخلی مزاحمت بڑھانے کی خاطر ان مزاحمتوں کو زیادہ سے زیادہ رکھا جاتا ہے جس کا مطلب ہے کہ ان میں گزرتے یک سمت رو کو کم سے کم رکھا جاتا ہے۔اس مثال میں اس برقی رو کو \عددی{\SI{10}{\micro \ampere}}  رکھا گیا ہے۔
 
 مساوات \حوالہ{مساوات_افزائش_فیٹ} کی مدد سے
 \begin{align*}
@@ -1918,7 +1918,7 @@ A_v=\frac{v_o}{v_s}=-g_m R_D=-4.216 \times 10^{-3} \times 1.2 \times 10^3=\SI[pe
 \label{شکل_ماسفیٹ_جمع_ماسفیٹ_مثال_درکار_مداخل}
 \end{figure}
 
-حل:یک سمتی \عددی{v_L=\SI{2}{\volt}} ہے لہٰذا
+حل:یک سمت \عددی{v_L=\SI{2}{\volt}} ہے لہٰذا
 \begin{align*}
 R_D=\frac{2}{1 \times 10^{-3}}=\SI{2}{\kilo \ohm}
 \end{align*}
@@ -2166,11 +2166,11 @@ i_{ds}=\frac{\frac{\mu v_1}{\mu+1}+\frac{v_3}{\mu+1}- v_2}{R_s+\frac{r_o}{\mu+1}
 %=============
 \حصہ{تابع سورس (ڈرین مشترک ایمپلیفائر)}
 \جزوحصہء{نقطہ  مائل}
-شکل \حوالہ{شکل_ماسفیٹ_تابع_مخارج} الف میں \اصطلاح {گھٹاتا ماسفیٹ} کا \اصطلاح {تابع سورس} ایمپلیفائر دکھایا گیا ہے۔یہاں \عددی{nFET} بھی استعمال کیا جا سکتا تھا۔ایسا دور منفی \عددی{V_{GSQ}} مہیا کرنے کی خاطر استعمال کیا جاتا ہے۔\اصطلاح {یک سمتی رو خطِ بوجھ} لکھتے ہیں۔
+شکل \حوالہ{شکل_ماسفیٹ_تابع_مخارج} الف میں \اصطلاح {گھٹاتا ماسفیٹ} کا \اصطلاح {تابع سورس} ایمپلیفائر دکھایا گیا ہے۔یہاں \عددی{nFET} بھی استعمال کیا جا سکتا تھا۔ایسا دور منفی \عددی{V_{GSQ}} مہیا کرنے کی خاطر استعمال کیا جاتا ہے۔\اصطلاح {یک سمت رو خطِ بوجھ} لکھتے ہیں۔
 \begin{align}\label{مساوات_ماسفیت_تابع_مخارج_بار_کا_خط}
 V_{DD}&=v_{DS}+i_{DS} \left(R_1+R_2 \right)
 \end{align}
-نقطہ  مائل یک سمتی مقداروں سے حاصل ہوتا ہے۔مزاحمت \عددی{R_g} میں صفر یک سمتی برقی رو ہونے کی وجہ سے اس کے دونوں سروں پر برابر یک سمتی برقی دباو پایا جائے گا۔شکل  الف میں \عددی{R_g} کے نچلے سرے پر \عددی{I_{DSQ}R_2} برقی دباو پایا جاتا ہے اور یوں ماسفیٹ کے گیٹ پر بھی یہی برقی دباو ہو گا۔ماسفیٹ کے سورس پر \عددی{I_{DSQ} \left(R_1+R_2 \right)} برقی دباو ہے۔یوں ماسفیٹ کے لئے ہم لکھ سکتے ہیں
+نقطہ  مائل یک سمت مقداروں سے حاصل ہوتا ہے۔مزاحمت \عددی{R_g} میں صفر یک سمت برقی رو ہونے کی وجہ سے اس کے دونوں سروں پر برابر یک سمت برقی دباو پایا جائے گا۔شکل  الف میں \عددی{R_g} کے نچلے سرے پر \عددی{I_{DSQ}R_2} برقی دباو پایا جاتا ہے اور یوں ماسفیٹ کے گیٹ پر بھی یہی برقی دباو ہو گا۔ماسفیٹ کے سورس پر \عددی{I_{DSQ} \left(R_1+R_2 \right)} برقی دباو ہے۔یوں ماسفیٹ کے لئے ہم لکھ سکتے ہیں
 \begin{gather}
 \begin{aligned}\label{مساوات_ماسفیت_تابع_مخارج_نقطہ _مائل}
 V_{GSQ}&=V_{GQ}-V_{SQ}\\
@@ -2328,7 +2328,7 @@ A_v \approx \frac{0.4 \times 10^{-3} \left(\frac{36}{36+1}\right) 12.5 \times 10
 \انتہا{مثال}
  %========================
 \حصہ{گیٹ مشترک ایمپلیفائر}
-شکل \حوالہ{شکل_ماسفیٹ_قابو_مشترک_ایمپلیفائر} الف میں \اصطلاح {گیٹ مشترک ایمپلیفائر} دکھایا گیا ہے جبکہ شکل  ب میں اسی کا مساوی بدلتی رو دور دکھایا گیا ہے۔گیٹ پر نسب کپیسٹر کی قیمت لامحدود دکھائی گئی ہے۔یوں درکار تعدد پر کپیسٹر کو قصر دور تصور کیا گیا ہے۔شکل  ب کا شکل \حوالہ{شکل_ماسفیٹ_مزاحمت_کے_عکس} کے ساتھ موازنہ کریں۔یہاں \عددی{v_1} اور \عددی{v_3} صفر وولٹ ہیں جبکہ \عددی{v_2} کو \عددی{v_i} کہا گیا ہے۔لہٰذا تمام اجزاء کو ڈرین میں منتقل کرتے ہوئے شکل \حوالہ{شکل_ماسفیٹ_مزاحمت_کے_عکس_ب} کے طرز پر  شکل \حوالہ{شکل_ماسفیٹ_قابو_مشترک_ایمپلیفائر_عکس} الف حاصل ہوتا ہے۔اسی طرح سورس جانب کا عکس شکل  ب میں دکھایا گیا ہے۔ 
+شکل \حوالہ{شکل_ماسفیٹ_قابو_مشترک_ایمپلیفائر} الف میں \اصطلاح {گیٹ مشترک ایمپلیفائر} دکھایا گیا ہے جبکہ شکل  ب میں اسی کا مساوی بدلتا رو دور دکھایا گیا ہے۔گیٹ پر نسب کپیسٹر کی قیمت لامحدود دکھائی گئی ہے۔یوں درکار تعدد پر کپیسٹر کو قصر دور تصور کیا گیا ہے۔شکل  ب کا شکل \حوالہ{شکل_ماسفیٹ_مزاحمت_کے_عکس} کے ساتھ موازنہ کریں۔یہاں \عددی{v_1} اور \عددی{v_3} صفر وولٹ ہیں جبکہ \عددی{v_2} کو \عددی{v_i} کہا گیا ہے۔لہٰذا تمام اجزاء کو ڈرین میں منتقل کرتے ہوئے شکل \حوالہ{شکل_ماسفیٹ_مزاحمت_کے_عکس_ب} کے طرز پر  شکل \حوالہ{شکل_ماسفیٹ_قابو_مشترک_ایمپلیفائر_عکس} الف حاصل ہوتا ہے۔اسی طرح سورس جانب کا عکس شکل  ب میں دکھایا گیا ہے۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{mosfetCommonGateAmplifier}
@@ -2520,7 +2520,7 @@ A_v=\left(\frac{0.00209^2 \times 2500}{1+2 \times 0.00209 \times 2500}\right)  \
 \انتہا{مثال}
 %==========================
 \حصہ{قوی ماسفیٹ}
-سلیکان پتری پر ماسفیٹ کا رقبہ بڑھا کر زیادہ طاقت کا ماسفیٹ وجود میں آتا ہے۔کئی ایمپیئر اور وولٹ تک کام کرنے والے ایسے \اصطلاح {قوی ماسفیٹ}\فرہنگ{قوی!ماسفیٹ}\فرہنگ{ماسفیٹ!قوی}\حاشیہب{power mosfet}\فرہنگ{power!mosfet} زیادہ طاقت قابو کرنے میں کام آتے ہیں۔اس طرح کے متعدد ماسفیٹ متوازی جوڑ کر مزید زیادہ برقی رو کو قابو کیا جاتا ہے۔یک سمتی سے بدلتی رو برقی دباو بناتے \اصطلاح {انورٹر}\فرہنگ{انورٹر}\حاشیہب{inverter}\فرہنگ{inverter} میں انہیں عموماً استعمال کیا جاتا ہے۔قوی ٹرانزسٹر کی نسبت سے \اصطلاح {قوی ماسفیٹ} انتہائی تیز ہے۔اسے  چالو سے منقطع یا منقطع سے چالو حالت میں چند نینو سیکنڈ میں لایا جا سکتا ہے۔مزید یہ کہ اسے چالو کرنے کی خاطر درکار برقی طاقت نہایت کم ہے جسے عام \عددی{CMOS} مخلوط دور فراہم کر سکتا ہے۔
+سلیکان پتری پر ماسفیٹ کا رقبہ بڑھا کر زیادہ طاقت کا ماسفیٹ وجود میں آتا ہے۔کئی ایمپیئر اور وولٹ تک کام کرنے والے ایسے \اصطلاح {قوی ماسفیٹ}\فرہنگ{قوی!ماسفیٹ}\فرہنگ{ماسفیٹ!قوی}\حاشیہب{power mosfet}\فرہنگ{power!mosfet} زیادہ طاقت قابو کرنے میں کام آتے ہیں۔اس طرح کے متعدد ماسفیٹ متوازی جوڑ کر مزید زیادہ برقی رو کو قابو کیا جاتا ہے۔یک سمت سے بدلتا رو برقی دباو بناتے \اصطلاح {انورٹر}\فرہنگ{انورٹر}\حاشیہب{inverter}\فرہنگ{inverter} میں انہیں عموماً استعمال کیا جاتا ہے۔قوی ٹرانزسٹر کی نسبت سے \اصطلاح {قوی ماسفیٹ} انتہائی تیز ہے۔اسے  چالو سے منقطع یا منقطع سے چالو حالت میں چند نینو سیکنڈ میں لایا جا سکتا ہے۔مزید یہ کہ اسے چالو کرنے کی خاطر درکار برقی طاقت نہایت کم ہے جسے عام \عددی{CMOS} مخلوط دور فراہم کر سکتا ہے۔
 
 برقی طاقت کا ضیاع  قوی ماسفیٹ کو گرم کرتے ہوئے اس کا درجہ حرارت بڑھاتا ہے۔درجہ حرارت بڑھنے سے  ماسفیٹ کی مزاحمت بھی بڑھتی ہے۔یوں متوازی جڑے ٹرانزسٹر میں اگر کسی وجہ سے ایک ماسفیٹ زیادہ گرم ہو تو اس کی  مزاحمت بڑھ جائے گا۔متوازی جڑے ماسفیٹ میں جس ماسفیٹ کا مزاحمت زیادہ ہو، اس کا \عددی{i_{DS}} کم ہو گا۔یوں زیادہ گرم ہونے والا ماسفیٹ خود بخود کم برقی رو گزارتے ہوئے کم  گرم ہو گا۔آپ دیکھ سکتے ہیں کہ متوازی جڑے \اصطلاح {قوی ٹرانزسٹر} کے برعکس متوازی جڑے \اصطلاح {قوی ماسفیٹ} از خود برقی رو کی تقسیم یوں رکھتے ہیں کہ ان میں کسی ایک پر زیادہ بوجھ نہ ڈلے۔ قوی ماسفیٹ کو بھی ٹھنڈا رکھنے کی خاطر \اصطلاح {سرد کار}\فرہنگ{سرد کار}\حاشیہب{heat sink}\فرہنگ{heat sink} کے ساتھ جوڑ کر رکھا جاتا ہے۔
 
