--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -878,8 +878,8 @@ v_m = \frac{10 \times 10^{6} \times 100 \times 10^{-3}}{10 \times 10^{6}+5 \time
 
 آپ نے دیکھا کہ \اصطلاح{مستحکم کار} کی مدد سے اشارہ کی صحیح قیمت حاصل ہوتی ہے۔ حساس اور باریک اشارات کی پیمائش عموماً مستحکم کار کے مدد سے ہی کی جاتی ہے۔
 
-\جزوجزوحصہ{بدلتی رو مستحکم کار}
-عموماً اشارے کے یک سمتی حصے کو روکتے ہوئے اس کے بدلتے حصے کو مستحکم بنانے کی ضرورت ہوتی ہے۔ایسی صورت میں \اصطلاح{بدلتا رو مستحکم کار} جسے شکل \حوالہ{شکل_بدلتا_رو_وسطی_دور} میں دکھایا گیا ہے استعمال کیا جائے گا۔\عددی{C_1} اور \عددی{C_2} کی قیمت اتنی رکھی جاتی ہے کہ درکار تعدد پر انہیں قصر دور تصور کیا جا سکے۔مزاحمت \عددی{R_1} اور \عددی{R_2} حسابی ایمپلیفائر کے مثبت داخلی سرے  کے \اصطلاح{داخلی میلان برقی رو}\حاشیہد{داخلی میلان برقی پر حصہ \حوالہ{حصہ_حسابی_داخلی_برقی_رو} میں غور کیا جائے گا۔} کے لئے راستہ فراہم کرتے ہیں۔\عددی{C_1} داخلی اشارے کے بدلتے جزو کو حسابی ایمپلیفائر کے مثبت داخلی سرے  تک پہنچنے کا راستہ فراہم کرتے ہوئے یک سمتی جزو کو روکتا ہے۔\عددی{C_2} کے عدم موجودگی میں داخلی اشارے کو بدلتا داخلی مزاحمت \عددی{R_1+R_2} نظر آتا جبکہ مستحکم کار سے توقع کی جاتی ہے کہ اس کا داخلی مزاحمت بہت زیادہ ہو۔آئیں دیکھیں کہ \عددی{C_2} کی شمولیت سے داخلی مزاحمت کیسے بڑھتی ہے۔
+\جزوجزوحصہ{بدلتا رو مستحکم کار}
+عموماً اشارے کے یک سمت حصے کو روکتے ہوئے اس کے بدلتے حصے کو مستحکم بنانے کی ضرورت ہوتی ہے۔ایسی صورت میں \اصطلاح{بدلتا رو مستحکم کار} جسے شکل \حوالہ{شکل_بدلتا_رو_وسطی_دور} میں دکھایا گیا ہے استعمال کیا جائے گا۔\عددی{C_1} اور \عددی{C_2} کی قیمت اتنی رکھی جاتی ہے کہ درکار تعدد پر انہیں قصر دور تصور کیا جا سکے۔مزاحمت \عددی{R_1} اور \عددی{R_2} حسابی ایمپلیفائر کے مثبت داخلی سرے  کے \اصطلاح{داخلی میلان برقی رو}\حاشیہد{داخلی میلان برقی پر حصہ \حوالہ{حصہ_حسابی_داخلی_برقی_رو} میں غور کیا جائے گا۔} کے لئے راستہ فراہم کرتے ہیں۔\عددی{C_1} داخلی اشارے کے بدلتے جزو کو حسابی ایمپلیفائر کے مثبت داخلی سرے  تک پہنچنے کا راستہ فراہم کرتے ہوئے یک سمت جزو کو روکتا ہے۔\عددی{C_2} کے عدم موجودگی میں داخلی اشارے کو بدلتا داخلی مزاحمت \عددی{R_1+R_2} نظر آتا جبکہ مستحکم کار سے توقع کی جاتی ہے کہ اس کا داخلی مزاحمت بہت زیادہ ہو۔آئیں دیکھیں کہ \عددی{C_2} کی شمولیت سے داخلی مزاحمت کیسے بڑھتی ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{bootstrapOpampBased}
@@ -1628,7 +1628,7 @@ v_0&=-\frac{R'}{8 R} \left(2^3 \times 5+2^2 \times 0+2^1 \times 5+2^0 \times 0 \
 \end{align*}  
 \انتہا{مثال}
 
-\جزوحصہ{یک سمتی  اندرونی داخلی انحرافی برقی دباو کا مسئلہ}
+\جزوحصہ{یک سمت  اندرونی داخلی انحرافی برقی دباو کا مسئلہ}
 
 اگر کامل حسابی ایمپلیفائر کے دونوں داخلی سرے آپس میں جوڑ کر انہیں برقی زمین کے ساتھ جوڑا جائے، یعنی \عددی{v_k=v_n=0} کر دیا جائے، تو ہم توقع کرتے ہیں کہ اس کا خارجی   اشارہ صفر وولٹ کا ہو گا، یعنی \عددی{v_o = A_d v_d =0} ہو گا۔حقیقت میں ایسا نہیں ہوتا\حاشیہد{اس مسئلہ کے پیدا ہونے کی وجوہات پر  حصہ \حوالہ{حصہ_تفرقی_ایمپلیفائر_داخلی_انحرافی_برقی_دباو} میں تفصیلاً تبصرہ کیا جائے گا} اور عموماً اس طرح جڑا حسابی ایمپلیفائر مثبت یا منفی جانب \اصطلاح{لبریز}\فرہنگ{لبریز} پایا جاتا ہے۔ حسابی ایمپلیفائر کے \عددی{v_o} کو صفر وولٹ پر لانے کی خاطر حسابی ایمپلیفائر کے دونوں داخلی سروں کے مابین برقی دباو \عددی{V_{OS}} مہیا کرنا پڑتا ہے۔
 
@@ -1641,7 +1641,7 @@ v_0&=-\frac{R'}{8 R} \left(2^3 \times 5+2^2 \times 0+2^1 \times 5+2^0 \times 0 \
 \caption{داخلی انحرافی برقی دباو اور اس کا خاتمہ}
 \label{شکل_انحرافی_برقی_دباو_اور_اس_کا_خاتمہ}
 \end{figure}
-اندرونی داخلی انحرافی برقی دباو کا تخمینہ لگانے کی خاطر مثبت ایمپلیفائر استعمال کیا جا سکتا ہے۔شکل \حوالہ{شکل_داخلی_انحرافی_برقی_دباو_کی_پیمائش} میں اسے دکھایا گیا ہے۔اس شکل میں مثبت سرے کو برقی زمین کے ساتھ جوڑا گیا ہے۔مزاحمت \عددی{R_2} کی قیمت کو \عددی{R_1} کی قیمت سے اتنا بڑا رکھا جاتا ہے کہ خارجی  سرے پر چند وولٹ کی یک سمتی برقی دباو \عددی{V_{OS}} پایا جائے۔اس دور میں اندرونی داخلی انحرافی برقی دباو کو بطور داخلی اشارہ استعمال کیا گیا ہے۔اگر اس اندرونی داخلی انحرافی برقی دباو کی قیمت \عددی{V_{OS}} ہو تب مثبت ایمپلیفائر کے لئے یوں لکھا جا سکتا ہے۔
+اندرونی داخلی انحرافی برقی دباو کا تخمینہ لگانے کی خاطر مثبت ایمپلیفائر استعمال کیا جا سکتا ہے۔شکل \حوالہ{شکل_داخلی_انحرافی_برقی_دباو_کی_پیمائش} میں اسے دکھایا گیا ہے۔اس شکل میں مثبت سرے کو برقی زمین کے ساتھ جوڑا گیا ہے۔مزاحمت \عددی{R_2} کی قیمت کو \عددی{R_1} کی قیمت سے اتنا بڑا رکھا جاتا ہے کہ خارجی  سرے پر چند وولٹ کی یک سمت برقی دباو \عددی{V_{OS}} پایا جائے۔اس دور میں اندرونی داخلی انحرافی برقی دباو کو بطور داخلی اشارہ استعمال کیا گیا ہے۔اگر اس اندرونی داخلی انحرافی برقی دباو کی قیمت \عددی{V_{OS}} ہو تب مثبت ایمپلیفائر کے لئے یوں لکھا جا سکتا ہے۔
 \begin{align}
 V_{o}=\left (1+\frac{R_2}{R_1} \right ) V_{OS} =\frac{\left (R_1+R_2 \right )}{R_1} V_{OS}
 \end{align}
@@ -1705,16 +1705,16 @@ v_k=-\SI{5.99}{\milli \volt}
 %=================
 \جزوحصہ{داخلی برقی رو کا مسئلہ} \شناخت{حصہ_حسابی_داخلی_برقی_رو}
 
-اگرچہ حسابی ایمپلیفائر کی داخلی برقی رو  \عددی{I_B} کی قیمت عموماً قابل نظر انداز ہوتی ہے البتہ کبھی کبھار نہایت حساس یا باریک اشارات کی قیمت بھی\عددی{I_B} کے لگ بھگ ہوتی ہے۔ایسی صورت میں \عددی{I_B}کو نظر انداز کرنا ممکن نہیں ہوتا۔اس طرح کے مجبوری کے علاوہ بھی ادوار بناتے وقت اگر \عددی{I_B} کو مد نظر رکھا جائے تو کچھ حرج نہیں۔داخلی برقی رو یک سمتی نوعیت کی ہوتی ہے۔حسابی ایمپلیفائر کے درست کارکردگی کے لئے یہ ضروری ہے کہ اس کے دونوں داخلی سروں  پر یک سمتی برقی رو کے لئے راستہ موجود ہو۔آئیں دیکھتے ہیں کہ اس \عددی{I_B} کے بارے میں عموماً کیا کیا جاتا ہے۔
+اگرچہ حسابی ایمپلیفائر کی داخلی برقی رو  \عددی{I_B} کی قیمت عموماً قابل نظر انداز ہوتی ہے البتہ کبھی کبھار نہایت حساس یا باریک اشارات کی قیمت بھی\عددی{I_B} کے لگ بھگ ہوتی ہے۔ایسی صورت میں \عددی{I_B}کو نظر انداز کرنا ممکن نہیں ہوتا۔اس طرح کے مجبوری کے علاوہ بھی ادوار بناتے وقت اگر \عددی{I_B} کو مد نظر رکھا جائے تو کچھ حرج نہیں۔داخلی برقی رو یک سمت نوعیت کا ہوتا ہے۔حسابی ایمپلیفائر کے درست کارکردگی کے لئے یہ ضروری ہے کہ اس کے دونوں داخلی سروں  پر یک سمت برقی رو کے لئے راستہ موجود ہو۔آئیں دیکھتے ہیں کہ اس \عددی{I_B} کے بارے میں عموماً کیا کیا جاتا ہے۔
 
-حسابی ایمپلیفائر کی اندرونی ساخت کی وجہ سے اس کے داخلی سروں پر یک سمتی برقی رو درکار ہوتی ہے۔مزید یہ کہ دونوں داخلی سروں پر برقی رو کا رخ ایک ہی سمت میں ہوتا ہے۔اگر کسی ایک قسم کے ایمپلیفائر میں برقی رو کا رخ داخلی سروں پر اندر کی جانب ہو تو کسی دوسرے قسم کے ایمپلیفائر میں دونوں یک سمتی داخلی برقی رو کا رخ باہر  کی جانب ہو سکتا ہے۔اس داخلی برقی رو جسے \اصطلاح{داخلی میلان برقی رو}\فرہنگ{داخلی میلان برقی رو}\فرہنگ{input bias current}\حاشیہب{input bias current} کہتے ہیں کے مقدار کا دارومدار ایمپلیفائر کی ساخت پر ہوتا ہے۔
+حسابی ایمپلیفائر کی اندرونی ساخت کی وجہ سے اس کے داخلی سروں پر یک سمت برقی رو درکار ہوتی ہے۔مزید یہ کہ دونوں داخلی سروں پر برقی رو کا رخ ایک ہی سمت میں ہوتا ہے۔اگر کسی ایک قسم کے ایمپلیفائر میں برقی رو کا رخ داخلی سروں پر اندر کی جانب ہو تو کسی دوسرے قسم کے ایمپلیفائر میں دونوں یک سمت داخلی برقی رو کا رخ باہر  کی جانب ہو سکتا ہے۔اس داخلی برقی رو جسے \اصطلاح{داخلی میلان برقی رو}\فرہنگ{داخلی میلان برقی رو}\فرہنگ{input bias current}\حاشیہب{input bias current} کہتے ہیں کے مقدار کا دارومدار ایمپلیفائر کی ساخت پر ہوتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{opampInputBiasCurrent}
 \caption{داخلی برقی رو کا مسئلہ}
 \label{شکل_داخلی_برقی_رو_کا_مسئلہ}
 \end{figure}
-شکل \حوالہ{شکل_داخلی_برقی_رو_کا_مسئلہ} الف میں مستحکم کار دکھایا گیا ہے جہاں حسابی ایمپلیفائر کے داخلی برقی رو \عددی{I_{B1}} اور\عددی{I_{B2}} کو منبع مستقل برقی رو\حاشیہب{constant current source}  تصور کیا گیا ہے۔یک سمتی داخلی اشارہ \عددی{V_S} کی قیمت صفر ہونے کی صورت میں  شکل  الف     حاصل ہوتا  ہے ۔مستحکم کار کی خاصیت یہ ہے کہ یہ داخلی اشارہ کو بغیر تبدیلی خارج کرتا ہے۔یوں ہم توقع رکھتے ہیں کہ \عددی{V_S=0} کی صورت میں \عددی{V_O=0} ہو گا مگر ایسا نہیں ہوتا۔شکل  الف     پر غور کرنے سے معلوم ہوتا ہے کہ داخلی برقی رو کی وجہ سے
+شکل \حوالہ{شکل_داخلی_برقی_رو_کا_مسئلہ} الف میں مستحکم کار دکھایا گیا ہے جہاں حسابی ایمپلیفائر کے داخلی برقی رو \عددی{I_{B1}} اور\عددی{I_{B2}} کو منبع مستقل برقی رو\حاشیہب{constant current source}  تصور کیا گیا ہے۔یک سمت داخلی اشارہ \عددی{V_S} کی قیمت صفر ہونے کی صورت میں  شکل  الف     حاصل ہوتا  ہے ۔مستحکم کار کی خاصیت یہ ہے کہ یہ داخلی اشارہ کو بغیر تبدیلی خارج کرتا ہے۔یوں ہم توقع رکھتے ہیں کہ \عددی{V_S=0} کی صورت میں \عددی{V_O=0} ہو گا مگر ایسا نہیں ہوتا۔شکل  الف     پر غور کرنے سے معلوم ہوتا ہے کہ داخلی برقی رو کی وجہ سے
 \begin{align*}
 V_K=-I_{B2} R
 \end{align*}
@@ -1753,7 +1753,7 @@ R_1=R
 V_O=-I_B R +I_B R=0
 \end{align*}
 
-پس ہم نے دیکھا کہ دور میں دونوں دخول پر یک سمتی برقی رو کے لئے برابر مزاحمت نسب کرنے سے \اصطلاح{داخلی میلان برقی رو} کا مسئلہ حل ہو جاتا ہے۔
+پس ہم نے دیکھا کہ دور میں دونوں دخول پر یک سمت برقی رو کے لئے برابر مزاحمت نسب کرنے سے \اصطلاح{داخلی میلان برقی رو} کا مسئلہ حل ہو جاتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{biasCurrentEffectElimination}
@@ -1835,18 +1835,18 @@ V_O=\left (I_{B1}-I_{B2} \right )R_2
 
 %=================================
 
-ہم دیکھتے ہیں کہ حسابی ایمپلیفائر کے دونوں داخلی سروں پر یک سمتی میلان برقی رو کو برقی زمین تک پہنچنے کی خاطر برابر مزاحمت فراہم کرنے سے داخلی برقی رو کا مسئلہ حل ہوتا ہے۔یہاں یک سمتی میلان برقی رو کے راستے کی بات کی گئی نہ کہ بدلتے برقی رو کے راستے کی۔اس بات کی وضاحت شکل \حوالہ{شکل_مسئلہ_داخلی_برقی_رو_کے_چند_مثال}    کی مدد سے کرتے ہیں۔یاد رہے کہ کپیسٹر میں یک سمتی برقی رو نہیں گزر سکتا اور یہ بالکل لامحدود مزاحمت کی طرح کردار ادا کرتا ہے۔شکل  \حوالہ{شکل_منفی_ایمپلیفائر_اور_داخلی_برقی_رو_کا_مسئلہ} الف میں منفی ایمپلیفائر دکھایا گیا ہے جس کا عمومی طور پر مثبت داخلی سرا برقی زمین کے ساتھ جڑا ہوتا ہے۔منفی داخلی سرے  کے یک سمتی میلان  برقی رو کا برقی زمین تک راستہ \عددی{R_2} ہے اور یوں مثبت داخلی سرے  اور برقی زمین کے درمیان \عددی{R=R_2} جوڑ کر داخلی میلان برقی رو کا مسئلہ حل کیا گیا ہے۔شکل \حوالہ{شکل_منفی_ایمپلیفائر_اور_داخلی_برقی_رو_کا_مسئلہ} ب میں مثبت ایمپلیفائر دکھایا گیا ہے۔یہاں اشارہ کو کپیسٹر کے ذریعہ ایمپلیفائر کے ساتھ جوڑا گیا ہے جس سے اس داخلی سرے  کے میلان برقی رو کو برقی زمین تک راستہ میسر نہیں ہو گا اور یوں یہ ایمپلیفائر کام کرنے سے قاصر ہے۔اس کی صحیح کارکردگی کے لئے ضروری ہے کہ اس داخلی سرے  سے برقی زمین تک یک سمتی میلان برقی رو کے لئے راستہ موجود ہو۔چونکہ منفی  داخلی سرے  کے یک سمتی میلان برقی رو کا برقی زمین تک راستہ \عددی{R_1} اور \عددی{R_2} کے ذریعہ ہے اور یک سمتی میلان برقی رو کے نقطہ نظر سے یہ دونوں مزاحمت متوازی جڑے ہیں لہٰذا مثبت  داخلی سرے  اور زمین کے درمیان مزاحمت
+ہم دیکھتے ہیں کہ حسابی ایمپلیفائر کے دونوں داخلی سروں پر یک سمت میلان برقی رو کو برقی زمین تک پہنچنے کی خاطر برابر مزاحمت فراہم کرنے سے داخلی برقی رو کا مسئلہ حل ہوتا ہے۔یہاں یک سمت میلان برقی رو کے راستے کی بات کی گئی نہ کہ بدلتے برقی رو کے راستے کی۔اس بات کی وضاحت شکل \حوالہ{شکل_مسئلہ_داخلی_برقی_رو_کے_چند_مثال}    کی مدد سے کرتے ہیں۔یاد رہے کہ کپیسٹر میں یک سمت برقی رو نہیں گزر سکتا اور یہ بالکل لامحدود مزاحمت کی طرح کردار ادا کرتا ہے۔شکل  \حوالہ{شکل_منفی_ایمپلیفائر_اور_داخلی_برقی_رو_کا_مسئلہ} الف میں منفی ایمپلیفائر دکھایا گیا ہے جس کا عمومی طور پر مثبت داخلی سرا برقی زمین کے ساتھ جڑا ہوتا ہے۔منفی داخلی سرے  کے یک سمت میلان  برقی رو کا برقی زمین تک راستہ \عددی{R_2} ہے اور یوں مثبت داخلی سرے  اور برقی زمین کے درمیان \عددی{R=R_2} جوڑ کر داخلی میلان برقی رو کا مسئلہ حل کیا گیا ہے۔شکل \حوالہ{شکل_منفی_ایمپلیفائر_اور_داخلی_برقی_رو_کا_مسئلہ} ب میں مثبت ایمپلیفائر دکھایا گیا ہے۔یہاں اشارہ کو کپیسٹر کے ذریعہ ایمپلیفائر کے ساتھ جوڑا گیا ہے جس سے اس داخلی سرے  کے میلان برقی رو کو برقی زمین تک راستہ میسر نہیں ہو گا اور یوں یہ ایمپلیفائر کام کرنے سے قاصر ہے۔اس کی صحیح کارکردگی کے لئے ضروری ہے کہ اس داخلی سرے  سے برقی زمین تک یک سمت میلان برقی رو کے لئے راستہ موجود ہو۔چونکہ منفی  داخلی سرے  کے یک سمت میلان برقی رو کا برقی زمین تک راستہ \عددی{R_1} اور \عددی{R_2} کے ذریعہ ہے اور یک سمت میلان برقی رو کے نقطہ نظر سے یہ دونوں مزاحمت متوازی جڑے ہیں لہٰذا مثبت  داخلی سرے  اور زمین کے درمیان مزاحمت
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{inputBiasCurrentExamplesA}
-\caption{مسئلہ داخلی برقی رو کے چند مثالیں اور یک سمتی برقی رو کا برقی زمین تک رسائی کا راستہ}
+\caption{مسئلہ داخلی برقی رو کے چند مثالیں اور یک سمت برقی رو کا برقی زمین تک رسائی کا راستہ}
 \label{شکل_مسئلہ_داخلی_برقی_رو_کے_چند_مثال}
 \end{figure}
 %
 \begin{align*}
 R=\frac{R_1 R_2}{R_1+R_2}
 \end{align*}
-نسب کر کے اس داخلی سرے  کے یک سمتی میلان برقی رو کو زمین تک راستہ فراہم کیا جاتا ہے اور ساتھ ہی ساتھ مسئلہ داخلی میلان برقی رو کو بھی حل کیا جاتا ہے۔یہاں یہ بتلانا ضروری ہے کہ مثبت داخلی سرے  اور زمین کے درمیان مزاحمت \عددی{R} نسب کرنے سے اس داخلی سرے  کا داخلی مزاحمت کم ہوتا ہے جو کہ عموماً قابل برداشت نہیں ہوتا۔
+نسب کر کے اس داخلی سرے  کے یک سمت میلان برقی رو کو زمین تک راستہ فراہم کیا جاتا ہے اور ساتھ ہی ساتھ مسئلہ داخلی میلان برقی رو کو بھی حل کیا جاتا ہے۔یہاں یہ بتلانا ضروری ہے کہ مثبت داخلی سرے  اور زمین کے درمیان مزاحمت \عددی{R} نسب کرنے سے اس داخلی سرے  کا داخلی مزاحمت کم ہوتا ہے جو کہ عموماً قابل برداشت نہیں ہوتا۔
 
 
 
