--- a/tex/electronicsOscillators.tex
+++ b/tex/electronicsOscillators.tex
@@ -26,7 +26,7 @@ WA =1
 آپ دیکھ سکتے ہیں کہ حقیقت میں کسی بھی مرتعش کو برقرار کام کرتے رکھنے کے لئے یہ ضروری ہے کہ \عددیء{\abs{WA} >1}  رکھا جائے۔حقیقت میں
  \عددیء{ \abs{WA} > 1.05} رکھا جاتا ہے۔
  
-مندرجہ بالا تذکرے میں تصور کیا گیا کہ مرتعش کو چالو کرنے کی خاطر ایک لمحے کے لئے \عددیء{X_s} فراہم کیا گیا۔ حقیقت میں مرتعش کو چالو کرتے وقت اسے عموماً کسی قسم کا ارتعاش کرتا اشارہ نہیں مہیا کیا جاتا۔کسی بھی دور جسے برقی طاقت مہیا نہیں کیا گیا ہو غیر چالو رہتا ہے اور ایسی صورت  میں اس کے تمام اشارات صفر وولٹ (صفر ایمپیئر) ہوتے ہیں۔اس طرح جب مرتعش کو برقی طاقت مہیا کر کے غیر چالو حالت سے چالو کیا جائے تو اس کے مختلف حصے چند ہی لمحوں میں غیر چالو صورت سے یک سمتی  مائل کردہ  صورت اختیار کر لیتے ہیں۔یوں ان لمحات کے دوران مرتعش پر پائے جانے والے تمام اشارات تغیر پذیر ہوتے ہیں جنہیں ہم چالو کرتے وقت کی برقی شور تصور کر سکتے ہیں۔مرتعش عموماً اسی برقی شور سے چالو ہو کر ارتعاش پذیر ہوتا ہے۔البتہ اگر کہیں ایسی صورت پائی جائے کہ مرتعش چالو ہوتے وقت ازخود ارتعاش پذیر نہیں ہو پاتا ہو یا اگر برقی شور کا سہارا لیتے ہوئے مرتعش کو چالو کرنا قابل قبول نہ ہو تب مرتعش کو چالو کرنے کی خاطر بیرونی اشارہ چند لمحات کے لئے مہیا کیا جاتا ہے۔\حاشیہد{مجھے گزشتہ پچیس سالوں میں صرف ایک مرتبہ مرتعش کو چالو کرنے کی خاطر اشارہ مہیا کرنا پڑا ہے۔} 
+مندرجہ بالا تذکرے میں تصور کیا گیا کہ مرتعش کو چالو کرنے کی خاطر ایک لمحے کے لئے \عددیء{X_s} فراہم کیا گیا۔ حقیقت میں مرتعش کو چالو کرتے وقت اسے عموماً کسی قسم کا ارتعاش کرتا اشارہ نہیں مہیا کیا جاتا۔کسی بھی دور جسے برقی طاقت مہیا نہیں کیا گیا ہو غیر چالو رہتا ہے اور ایسی صورت  میں اس کے تمام اشارات صفر وولٹ (صفر ایمپیئر) ہوتے ہیں۔اس طرح جب مرتعش کو برقی طاقت مہیا کر کے غیر چالو حالت سے چالو کیا جائے تو اس کے مختلف حصے چند ہی لمحوں میں غیر چالو صورت سے یک سمت  مائل کردہ  صورت اختیار کر لیتے ہیں۔یوں ان لمحات کے دوران مرتعش پر پائے جانے والے تمام اشارات تغیر پذیر ہوتے ہیں جنہیں ہم چالو کرتے وقت کی برقی شور تصور کر سکتے ہیں۔مرتعش عموماً اسی برقی شور سے چالو ہو کر ارتعاش پذیر ہوتا ہے۔البتہ اگر کہیں ایسی صورت پائی جائے کہ مرتعش چالو ہوتے وقت ازخود ارتعاش پذیر نہیں ہو پاتا ہو یا اگر برقی شور کا سہارا لیتے ہوئے مرتعش کو چالو کرنا قابل قبول نہ ہو تب مرتعش کو چالو کرنے کی خاطر بیرونی اشارہ چند لمحات کے لئے مہیا کیا جاتا ہے۔\حاشیہد{مجھے گزشتہ پچیس سالوں میں صرف ایک مرتبہ مرتعش کو چالو کرنے کی خاطر اشارہ مہیا کرنا پڑا ہے۔} 
 
 اب تک کی گفتگو میں خارجی اشارے کی شکل پر کسی قسم کی بحث نہیں کی گئی۔حقیقت میں مرتعش کے خارجی اشارے کی شکل کچھ بھی ہو سکتی ہے البتہ اس باب میں صرف سائن نما خارجی اشارہ پیدا کرنے والے مرتعش پر غور کیا جائے گا جن میں ٹرانزسٹر ایمپلیفائر  استعمال کرتے ہوئے واپسی اشارے کو مزاحمت، کپیسٹر، امالہ، ٹرانسفارمر وغیرہ کی مدد سے حاصل کیا جاتا ہے۔
 
@@ -236,7 +236,7 @@ Z_{RC}=\frac{R}{\beta} \left[ 29+20k -j 4 k \sqrt{6+4k}\right]
 \label{شکل_مزاحمت_کپیسٹر_ماسفیٹ_مرتعش}
 \end{figure}
 %
-شکل \حوالہ{شکل_مزاحمت_کپیسٹر_ماسفیٹ_مرتعش} الف میں ماسفیٹ سے \عددیء{RC} مرتعش کا حصول دکھایا گیا ہے۔شکل  ب میں اسی کا مساوی دور دکھایا گیا ہے۔جیسے آپ دیکھ سکتے ہیں یہ بالکل دو جوڑ ٹرانزسٹر کے دور کے طرح کا ہی ہے۔حقیقی دور میں \عددیء{R'} کے استعمال کی ضرورت نہیں ہوتی چونکہ \عددیء{R_1} اور \عددیء{R_2} کو یوں رکھنا ممکن ہو گا کہ یہ ماسفیٹ کو یک سمتی مائل کرنے کے ساتھ ساتھ \عددیء{R=R_m} کے شرط کو بھی پورا کرے جہاں \عددیء{R_m = \frac{R_1 R_2}{R_1+R_2}} کے برابر ہے۔
+شکل \حوالہ{شکل_مزاحمت_کپیسٹر_ماسفیٹ_مرتعش} الف میں ماسفیٹ سے \عددیء{RC} مرتعش کا حصول دکھایا گیا ہے۔شکل  ب میں اسی کا مساوی دور دکھایا گیا ہے۔جیسے آپ دیکھ سکتے ہیں یہ بالکل دو جوڑ ٹرانزسٹر کے دور کے طرح کا ہی ہے۔حقیقی دور میں \عددیء{R'} کے استعمال کی ضرورت نہیں ہوتی چونکہ \عددیء{R_1} اور \عددیء{R_2} کو یوں رکھنا ممکن ہو گا کہ یہ ماسفیٹ کو یک سمت مائل کرنے کے ساتھ ساتھ \عددیء{R=R_m} کے شرط کو بھی پورا کرے جہاں \عددیء{R_m = \frac{R_1 R_2}{R_1+R_2}} کے برابر ہے۔
 %================
 \حصہ{وائن مرتعش}
 شکل \حوالہ{شکل_مرتعش_وائن} میں \اصطلاح{وائن مرتعش}\فرہنگ{وائن مرتعش}\فرہنگ{مرتعش!وائن}\حاشیہب{Wien bridge oscillator}\فرہنگ{Wien bridge oscillator} دکھایا گیا ہے۔وائن مرتعش\حاشیہد{اس مرتعش کو میکس وائن نے دریافت کیا۔} پر پہلے بغیر حل کئے غور کرتے ہیں۔
@@ -247,7 +247,7 @@ Z_{RC}=\frac{R}{\beta} \left[ 29+20k -j 4 k \sqrt{6+4k}\right]
 \label{شکل_مرتعش_وائن}
 \end{figure}
 
-آپ جانتے ہیں کہ یک سمتی رو پر کپیسٹر کھلے سرے کردار ادا کرتا ہے۔یوں اگر \عددیء{v_O} برقرار کسی مثبت برقی رو پر رہے تب \عددیء{Z_2} کھلے سرے کردار ادا کرے گا جبکہ \عددیء{Z_1} بطور مزاحمت \عددیء{R} کردار ادا کرے گا۔یوں \عددیء{v_k} برقی زمین پر رہے گا اور \عددیء{v_k=0} ہو گا۔اس کے برعکس \عددیء{R_1} اور \عددیء{R_2} حسابی ایمپلیفائر کے مثبت خارجی برقی دباو \عددیء{v_O} سے \عددیء{v_n=\tfrac{R_1 v_O}{R_1+R_2}} پیدا کریں گے جو کہ مثبت برقی دباو ہو گا۔ایسی صورت میں \عددیء{v_n > v_k} ہے اور حسابی ایمپلیفائر کا خارجی اشارہ \عددیء{v_O} برقرار مثبت نہیں رہ سکتا اور یہ جلد از جلد منفی ہونے کی کوشش کرے گا ۔آئیں اب تصور کریں کہ \عددیء{v_O} برقرار کسی منفی برقی دباو پر رہتا ہے۔اس مرتبہ بھی \عددیء{v_k=0} ہی حاصل ہوتا ہے البتہ منفی \عددیء{v_O} کی صورت میں \عددیء{v_n=\tfrac{R_1 v_O}{R_1+R_2}} بھی منفی برقی دباو ہو گا اور یوں \عددیء{v_k > v_n} ہو گا۔ایسی صورت میں حسابی ایمپلیفائر  کا خارجی اشارہ برقرار منفی نہیں رہ سکتا اور یہ جلد از جلد مثبت ہونے کی کوشش کرے گا۔مندرجہ بالا تبصرے سے یہ حقیقت اجاگر ہوئی کہ \عددیء{v_O} برقرار نہ مثبت اور نا ہی منفی برقی دباو پر ٹھر سکتا ہے بلکہ یہ ارتعاش پذیر رہتا ہے۔
+آپ جانتے ہیں کہ یک سمت رو پر کپیسٹر کھلے سرے کردار ادا کرتا ہے۔یوں اگر \عددیء{v_O} برقرار کسی مثبت برقی رو پر رہے تب \عددیء{Z_2} کھلے سرے کردار ادا کرے گا جبکہ \عددیء{Z_1} بطور مزاحمت \عددیء{R} کردار ادا کرے گا۔یوں \عددیء{v_k} برقی زمین پر رہے گا اور \عددیء{v_k=0} ہو گا۔اس کے برعکس \عددیء{R_1} اور \عددیء{R_2} حسابی ایمپلیفائر کے مثبت خارجی برقی دباو \عددیء{v_O} سے \عددیء{v_n=\tfrac{R_1 v_O}{R_1+R_2}} پیدا کریں گے جو کہ مثبت برقی دباو ہو گا۔ایسی صورت میں \عددیء{v_n > v_k} ہے اور حسابی ایمپلیفائر کا خارجی اشارہ \عددیء{v_O} برقرار مثبت نہیں رہ سکتا اور یہ جلد از جلد منفی ہونے کی کوشش کرے گا ۔آئیں اب تصور کریں کہ \عددیء{v_O} برقرار کسی منفی برقی دباو پر رہتا ہے۔اس مرتبہ بھی \عددیء{v_k=0} ہی حاصل ہوتا ہے البتہ منفی \عددیء{v_O} کی صورت میں \عددیء{v_n=\tfrac{R_1 v_O}{R_1+R_2}} بھی منفی برقی دباو ہو گا اور یوں \عددیء{v_k > v_n} ہو گا۔ایسی صورت میں حسابی ایمپلیفائر  کا خارجی اشارہ برقرار منفی نہیں رہ سکتا اور یہ جلد از جلد مثبت ہونے کی کوشش کرے گا۔مندرجہ بالا تبصرے سے یہ حقیقت اجاگر ہوئی کہ \عددیء{v_O} برقرار نہ مثبت اور نا ہی منفی برقی دباو پر ٹھر سکتا ہے بلکہ یہ ارتعاش پذیر رہتا ہے۔
 
 اگر \عددیء{v_O=0} تصور کیا جائے تب \عددیء{v_k=v_n=0} ہی حاصل ہوتے ہیں اور \عددیء{v_O} برقرار برقی زمین پر ہی رہے گا۔یہ صورت حال نا پائیدار ہے۔برقی ادوار میں مسلسل برقی شور پایا جاتا ہے جس کی وجہ سے کسی بھی مقام پر پائے جانے والے برقی دباو میں لمحہ با لمحہ باریک تبدیلیاں پیدا ہوتی ہیں۔یوں \عددیء{v_k} اور \عددیء{v_n} زیادہ دیر مکمل طور پر برابر برقی دباو پر نہیں رہ سکتے اور جلد ہی لمحاتی طور پر \عددیء{v_k>v_n} اور یا \عددیء{v_k<v_n} ہو جائے گا۔ایسا ہوتے ہی \عددیء{v_O} حرکت میں آئے گا اور دور ارتعاش پذیر ہو جائے گا۔آئیں اب وائن مرتعش کا تحلیلی تجزیہ کریں
 
@@ -559,7 +559,7 @@ C=\frac{C_1 C_2}{C_1 + C_2}
 یعنی \عددیء{C_1} اور \عددیء{C_2} کی سلسلہ وار جڑی کل کپیسٹر ہے۔
 
 \حصہ{ہارٹلے اور کالپٹس مرتعش}
-شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} میں ٹرانزسٹر ایمپلیفائر استعمال کرتے ہوئے ہارٹلے اور کالپٹس مرتعش بنائے گئے ہیں۔شکل  الف میں واپس کار یعنی \عددیء{L_1}، \عددیء{L_2} اور \عددیء{C} کی شمولیت سے بنیادی ایمپلیفائر مرتعش میں تبدیل ہو جاتا ہے۔شکل \حوالہ{شکل_عمومی_مرتعش} کے ساتھ موازنہ کرنے سے آپ دیکھ سکتے ہیں کہ \عددیء{L_1} دراصل \عددیء{X_1} ہے، \عددیء{L_2} دراصل \عددیء{X_2} ہے جبکہ \عددیء{C} دراصل \عددیء{X_3} ہے۔\عددیء{C_b} اور \عددیء{C_c} اس بات کو یقینی بناتے ہیں کہ  واپس کار کی شمولیت سے بنیادی ایمپلیفائر کے نقطہ مائل پر کوئی اثر نہیں ہو گا۔شکل  ب میں \عددیء{C_c} کی ضرورت نہیں چونکہ \عددیء{C_1}، \عددیء{C_2} اور \عددیء{C_b} کی موجودگی میں اس راستے یک سمتی رو کا گزر ممکن نہیں۔\عددیء{C_e} قصری کپیسٹر\حاشیہب{bypass capacitor} ہے جبکہ \عددیء{C_c} اور \عددیء{C_b} جفتی کپیسٹر\حاشیہب{coupling capacitors} ہیں۔چالو تعدد پر \عددیء{C_e}، \عددیء{C_b} اور \عددیء{C_c} کو لامحدود تصور کیا جاتا ہے۔
+شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} میں ٹرانزسٹر ایمپلیفائر استعمال کرتے ہوئے ہارٹلے اور کالپٹس مرتعش بنائے گئے ہیں۔شکل  الف میں واپس کار یعنی \عددیء{L_1}، \عددیء{L_2} اور \عددیء{C} کی شمولیت سے بنیادی ایمپلیفائر مرتعش میں تبدیل ہو جاتا ہے۔شکل \حوالہ{شکل_عمومی_مرتعش} کے ساتھ موازنہ کرنے سے آپ دیکھ سکتے ہیں کہ \عددیء{L_1} دراصل \عددیء{X_1} ہے، \عددیء{L_2} دراصل \عددیء{X_2} ہے جبکہ \عددیء{C} دراصل \عددیء{X_3} ہے۔\عددیء{C_b} اور \عددیء{C_c} اس بات کو یقینی بناتے ہیں کہ  واپس کار کی شمولیت سے بنیادی ایمپلیفائر کے نقطہ مائل پر کوئی اثر نہیں ہو گا۔شکل  ب میں \عددیء{C_c} کی ضرورت نہیں چونکہ \عددیء{C_1}، \عددیء{C_2} اور \عددیء{C_b} کی موجودگی میں اس راستے یک سمت رو کا گزر ممکن نہیں۔\عددیء{C_e} قصری کپیسٹر\حاشیہب{bypass capacitor} ہے جبکہ \عددیء{C_c} اور \عددیء{C_b} جفتی کپیسٹر\حاشیہب{coupling capacitors} ہیں۔چالو تعدد پر \عددیء{C_e}، \عددیء{C_b} اور \عددیء{C_c} کو لامحدود تصور کیا جاتا ہے۔
 
 بلند تعدد پر ان اشکال کو حل کرتے ہوئے ٹرانزسٹر کے بلند تعددی ریاضی نمونہ استعمال ہو گا۔ایسا کرتے وقت ریاضی نمونے کے مختلف جزو کو بھی واپس کار کا حصہ تصور کیا جا سکتا ہے۔مثلاً نہایت بلند تعدد کالپٹس مرتعش تخلیق دیتے وقت ٹرانزسٹر کے بلند تعدد ریاضی نمونے کے جزو \عددیء{C_{be}} اور \عددیء{C_{bc}} کا مساوی ملر کپیسٹر \عددیء{C_M}\حاشیہب{Miller capacitance} کے مجموعے کو بطور \عددیء{C_1} استعمال کیا جاتا ہے (یعنی \عددیء{C_1=C_{be}+C_M})۔
 %
