--- a/tex/electronicsSymbols.tex
+++ b/tex/electronicsSymbols.tex
@@ -6,11 +6,11 @@
 
 \begin{description}
 \item
-[\عددی{V_{DD},V_{CC},V_{EE},V_{BB}}]  منبع یک سمتی برقی دباو
+[\عددی{V_{DD},V_{CC},V_{EE},V_{BB}}]  منبع یک سمت برقی دباو
 \item
-[\عددی{V_{BE}, V_{CE},I_D, I_C}] یک سمتی برقی دباو اور برقی رو  (اشارہ موجود یا عدم موجود)
+[\عددی{V_{BE}, V_{CE},I_D, I_C}] یک سمت برقی دباو اور برقی رو  (اشارہ موجود یا عدم موجود)
 \item
-[\عددی{V_{CEQ},I_{CQ}}]  نقطہ کارکردگی پر یک سمتی برقی دباو اور برقی رو (اشارہ عدم موجود)
+[\عددی{V_{CEQ},I_{CQ}}]  نقطہ کارکردگی پر یک سمت برقی دباو اور برقی رو (اشارہ عدم موجود)
 \item
 [\عددی{v_d , v_{be},i_d,i_c,i_e}] بدلتا اشارہ (اوسط قیمت صفر)
 \item
